"About me" update

--- a/architecture/manifold_ground/index.html
+++ b/architecture/manifold_ground/index.html
@@ -20,8 +20,7 @@
 
   <meta name="keywords"
     content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
-  <meta name="description"
-    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
+  <meta name="description" content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
 ">
 
   <!-- Open Graph / Facebook -->
@@ -63,15 +62,15 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
   <!--font using hello-->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <!--font     font-family: 'Catamaran', sans-serif; -->
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
   <!--font font-family: 'Lato', sans-serif; -->
 
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <!--font awesome -->
 
 
@@ -83,21 +82,17 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- crypto js -->
 
-  <script type="text/javascript"
-    src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!--jQuery-->
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!--aos-->
-  <script type="text/javascript"
-    src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
+  <script type="text/javascript" src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
   <!-- gsap -tool-bar-->
-  <script type="text/javascript"
-    src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
+  <script type="text/javascript" src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
   <!-- gsap - tool-bar-->
 
-  <script type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
   <!-- gsap - ScrollTrigger-->
   <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
   <!-- gsap - ScrollTrigger-->
@@ -114,7 +109,7 @@
 
 
 
-  
+
 </head>
 
 <body>
@@ -126,32 +121,32 @@
   </div>
   <!--progressBarScroll-->
   <!-- header -->
-  <nav class="header" id="header">
-    <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer colorBlack">VW</a>
-      <div class="navbar">
-        <ul class="nav-menu">
-          <li class="nav-item inactive marginZero"><a href="/" class="nav-link box font300-1080 ">PROJECT</a>
-          </li>
-          <li class="nav-item active greenNav marginZero"><a href="/architecture"
-              class="nav-link box">ARCHITECTURE</a>
-          </li>
-          <li class="nav-item inactive marginZero"><a href="/photography"
-              class="nav-link box font300-1080 ">PHOTOGRAPHY</a>
-          </li>
-          <li class="nav-item inactive marginZero"><a href="/about"
-              class="nav-link box font300-1080 ">ABOUT</a>
-          </li>
-        </ul>
+  <header>
+    <nav class="header" id="header">
+      <div class="backgroundColorNav">
+        <a href="http://vickywang.me/"><img class="logo pointer" src="../../icon/LOGO.svg" alt="VW"
+            title="vickywang.me"></a>
+        <div class="navbar">
+          <ul class="nav-menu">
+            <li class="nav-item inactive marginZero"><a href="/" class="nav-link box">PROJECT</a>
+            </li>
+            <li class="nav-item active activeNav marginZero"><a href="/architecture"
+                class="nav-link box">ARCHITECTURE</a>
+            </li>
+            <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
+            </li>
+            <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">ABOUT</a>
+            </li>
+          </ul>
+        </div>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
       </div>
-
-      <div class="hamburger">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
-    </div>
-  </nav>
+    </nav>
+  </header>
   <!-- header -->
 
   <div class="blankHL"></div>
@@ -165,9 +160,16 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <h4>MANIFOLD GROUND</h4>
+          <h5>Urban public space</h5>
+          <h3 class="" data-aos="fade-up"><strong>MANIFOLD GROUND</strong></h3>
+
           <p class="lineHorizAll"></p>
-          <h6>Form finding from 2 dimensions to 3 dimensions</h6>
+          <h6 class=""> <strong>Studio:</strong> &nbsp; [IN]ARCH ADV</h6>
+          <h6><strong>Duration: </strong> <span class="textItalic">&nbsp;SUMMERS 2014 6
+              Weeks</span> </h6>
+          <h6> <strong>Project:</strong> &nbsp;Summer Program, CED, UC Berkeley</h6>
+          <h6> <strong>Site:</strong> &nbsp; 450 Hayes St. San Francisco, CA 94102 </h6>
+          <h6> <strong>Instructor:</strong> &nbsp; Keith Plymale</h6>
         </div>
       </div>
 
@@ -178,16 +180,17 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
+
+  <!-- Arrow -->
+  <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Methodology </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <div class="element">
+        <h2 class="tArrow"> Methodology <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+        </h2>
       </div>
     </div>
   </div>
-  <!--Arrow-->
+  <!-- Arrow -->
   <div class="blankHS"></div>
   <!-- object -->
   <div class="wrapper">
@@ -240,16 +243,17 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
+
+  <!-- Arrow -->
+  <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Site and Programs </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <div class="element">
+        <h2 class="tArrow"> Site and Programs <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+        </h2>
       </div>
     </div>
   </div>
-  <!--Arrow-->
+  <!-- Arrow -->
   <div class="blankHS"></div>
 
   <!--site -->
@@ -270,17 +274,17 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
+  <!-- Arrow -->
+  <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Flyover View </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <div class="element">
+        <h2 class="tArrow"> Flyover View <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+        </h2>
       </div>
     </div>
   </div>
-  <!--Arrow-->
+  <!-- Arrow -->
+
   <div class="blankHS"></div>
 
   <!--Section Perspective -->
@@ -302,16 +306,17 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
-    <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Site </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+
+    <!-- Arrow -->
+    <div class="Grid Grid--full wrapper">
+      <div class="Grid-cell">
+        <div class="element">
+          <h2 class="tArrow">Site <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+          </h2>
+        </div>
       </div>
     </div>
-  </div>
-  <!--Arrow-->
+    <!-- Arrow -->
   <div class="blankHS"></div>
   <!--SITE -->
   <div class="wrapper">
@@ -347,18 +352,21 @@
   <!--SITE -->
 
 
-  <div class="blankHL"></div>
+  <!-- message -->
+  <div class="blankHM"></div>
+  <div class="Grid Grid--full u-textCenter">
+    <div class="Grid-cell">
+      <div data-aos="fade-up">
+        <h4 class="element">
+          Thank You for Visiting &#33; Check back soon for more updates and stay tuned &#33;
+        </h4>
+      </div>
+      <a href="/" class=""><img class="widthXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+    </div>
+  </div>
+  <div class="blankHM"></div>
 
-
-  <p class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
-  <p class="textM centerHorz" data-aos="fade-up">please email me for professional projects</p>
-  <div class="blank-lineheight-s"></div>
-
-
-  <div class="blankHL"></div>
-
-
-
+  <!-- message -->
   <!--back to top-->
   <button id="myBtn" title="Back to top">
     <div id="dad">
@@ -371,112 +379,120 @@
     </div>
   </button>
   <!--back to top-->
-<!--footer-->
-<footer class="GreyBg100">
+  <!--footer-->
+  <footer class="GreyBg100">
 
-  <div class="blankHS"></div>
+    <div class="blankHS"></div>
+    <div class="wrapper">
+      <div class="element">
 
-  <div class="Grid Grid--gutters Grid--1of3 wrapper">
-    <div class="Grid-cell">
+        <div class="Grid Grid--gutters Grid--1of3 ">
+          <div class="Grid-cell">
 
-      <a href="/" class=""><img class="widthXXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-      <div class="blankHXS"></div>
+            <a href="/" class=""><img class="widthXXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+            <div class="blankHXS"></div>
 
-      <div class="Grid Grid--gutters">
-        <div class="ClipboardBoxIconOnly">
-          <button class="ClipboardIconOnly">
-            <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
-              title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
-            <p class="clickIconCopy">vickyw.design@gmail.com</p>
-          </button>
-        </div>
-        <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-          <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
-        </a>
+            <div class="Grid Grid--gutters">
+              <div class="ClipboardBoxIconOnly">
+                <button class="ClipboardIconOnly">
+                  <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
+                    title="Copy to Clipboard" src="../../icon/mail.svg" alt="LinkedIn">
+                  <p class="clickIconCopy">vickyw.design@gmail.com</p>
+                </button>
+              </div>
+              <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/in.svg" alt="LinkedIn">
+              </a>
 
-        <a target="_blank" href="https://github.com/vicky-wyq">
-          <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/git.svg" alt="GitHub" title="GitHub">
-        </a>
+              <a target="_blank" href="https://github.com/vicky-wyq">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/git.svg" alt="GitHub"
+                  title="GitHub">
+              </a>
 
-        <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-          <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
-        </a>
+              <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/Codepen.svg" alt="CodePen">
+              </a>
 
-        <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-          <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/ins.svg" alt="Instagram"
-            title="Instagram">
-        </a>
-      </div>
-      <div class="blankHXS"></div>
-    </div>
-    <div class="Grid-cell">
-      <div class="Grid Grid--gutters Grid--cols-6">
-        <div class="Grid-cell">
-          <h5> <strong> Project </strong> </h5>
-          <div class="blankHXXS"></div>
-          <a href="/glorify/">
-            <h6> <strong class="Grey700">Glorify</strong> </h6>
-          </a>
+              <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/ins.svg" alt="Instagram"
+                  title="Instagram">
+              </a>
+            </div>
+            <div class="blankHXS"></div>
+          </div>
+          <div class="Grid-cell">
+            <div class="Grid Grid--gutters Grid--cols-6">
+              <div class="Grid-cell">
+                <h5> <strong> Project </strong> </h5>
+                <div class="blankHXXS"></div>
+                <a href="/glorify/">
+                  <h6> <strong class="Grey700">Glorify</strong> </h6>
+                </a>
 
-          <h6>Elevating Community Involvement</h6>
-          <div class="blankHXXS"></div>
-          <a href="/appointa/">
-            <h6> <strong class="Grey700">APPOINTA</strong> </h6>
-          </a>
-          <h6>Simplifying Interview Coordination</h6>
-          <div class="blankHXXS"></div>
-          <a href="/seer/">
-            <h6> <strong class="Grey700">SEER</strong> </h6>
-          </a>
-          <h6>Empowering Brand Managers with Insights</h6>
-        </div>
+                <h6>Elevating Community Involvement</h6>
+                <div class="blankHXXS"></div>
+                <a href="/appointa/">
+                  <h6> <strong class="Grey700">APPOINTA</strong> </h6>
+                </a>
+                <h6>Simplifying Interview Coordination</h6>
+                <div class="blankHXXS"></div>
+                <a href="/seer/">
+                  <h6> <strong class="Grey700">SEER</strong> </h6>
+                </a>
+                <h6>Empowering Brand Managers with Insights</h6>
+              </div>
 
-        <div class="Grid-cell">
-          <h5> <strong> Service </strong> </h5>
-          <div class="blankHXXS"></div>
+              <div class="Grid-cell">
+                <h5> <strong> Service </strong> </h5>
+                <div class="blankHXXS"></div>
 
-          <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
-          <h6>Creating Intuitive User Experiences</h6>
-          <div class="blankHXXS"></div>
+                <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
+                <h6>Creating Intuitive User Experiences</h6>
+                <div class="blankHXXS"></div>
 
-          <h6> <strong class="Grey700">Design Research </strong> </h6>
-          <h6>In-depth Analysis for Targeted Solutions</h6>
-          <div class="blankHXXS"></div>
+                <h6> <strong class="Grey700">Design Research </strong> </h6>
+                <h6>In-depth Analysis for Targeted Solutions</h6>
+                <div class="blankHXXS"></div>
 
-          <h6> <strong class="Grey700">Web Development </strong> </h6>
-          <h6>Seamless Design Implementation</h6>
-          <div class="blankHXXS"></div>
+                <h6> <strong class="Grey700">Web Development </strong> </h6>
+                <h6>Seamless Design Implementation</h6>
+                <div class="blankHXXS"></div>
 
-          <h6> <strong class="Grey700">Branding </strong> </h6>
-          <h6>Crafting Memorable Brand Identities</h6>
-        </div>
+                <h6> <strong class="Grey700">Branding </strong> </h6>
+                <h6>Crafting Memorable Brand Identities</h6>
+              </div>
 
-        <div class="Grid-cell">
-          <h5> <strong> About </strong> </h5>
-          <div class="blankHXXS"></div>
+              <div class="Grid-cell">
+                <h5> <strong> About </strong> </h5>
+                <div class="blankHXXS"></div>
 
-          <a href="/about">
-            <h6>About me</h6>
-          </a>
-          <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
-        </div>
-      </div>
+                <a href="/about">
+                  <h6>About me</h6>
+                </a>
+                <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
+              </div>
+            </div>
+          </div>
 
-    </div>
-  </div>
-  <div class="blankHS"></div>
-  <div class="Grid Grid--full wrapper">
-    <div class="Grid-cell">
-      <div class="element footerBorder">
-        <div class="element">
-          <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
         </div>
       </div>
-    </div>
-  </div>
 
-</footer>
-<!--footer-->
+    </div>
+
+
+    <div class="blankHS"></div>
+    <div class="Grid Grid--full wrapper">
+      <div class="Grid-cell">
+        <div class=" footerBorder">
+          <div class="element">
+            <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </footer>
+  <!--footer-->
 
 </body>
 
