--- a/glorify/index.html
+++ b/glorify/index.html
@@ -207,12 +207,12 @@
           </li>
 
           <li class="nav-item inactive marginZero"><a href="/architecture"
-              class="nav-link box font300-1080 ">ARCHITECTURE</a>
+              class="nav-link box ">ARCHITECTURE</a>
           </li>
           <li class="nav-item inactive marginZero"><a href="/photography"
-              class="nav-link box font300-1080">PHOTOGRAPHY</a>
+              class="nav-link box ">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
+          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">ABOUT</a>
           </li>
         </ul>
 
@@ -5278,11 +5278,13 @@
     </div>
   </button>
   <!--back to top-->
-  <!--footer-->
-  <footer class="GreyBg100">
+<!--footer-->
+<footer class="GreyBg100">
 
-    <div class="blankHS"></div>
-    <div class="wrapper">
+  <div class="blankHS"></div>
+  <div class="wrapper">
+    <div class="element">
+
       <div class="Grid Grid--gutters Grid--1of3 ">
         <div class="Grid-cell">
 
@@ -5369,26 +5371,27 @@
               <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
             </div>
           </div>
-
         </div>
-      </div>
 
-    </div>
-
-
-    <div class="blankHS"></div>
-    <div class="Grid Grid--full wrapper">
-      <div class="Grid-cell">
-        <div class="element footerBorder">
-          <div class="element">
-            <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
-          </div>
-        </div>
       </div>
     </div>
 
-  </footer>
-  <!--footer-->
+  </div>
+
+
+  <div class="blankHS"></div>
+  <div class="Grid Grid--full wrapper">
+    <div class="Grid-cell">
+      <div class=" footerBorder">
+        <div class="element">
+          <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</footer>
+<!--footer-->
 
 
 </body>
