--- a/lasohealth/index.html
+++ b/lasohealth/index.html
@@ -212,12 +212,12 @@
           </li>
 
           <li class="nav-item inactive marginZero"><a href="/architecture"
-              class="nav-link box font300-1080 ">ARCHITECTURE</a>
+              class="nav-link box ">ARCHITECTURE</a>
           </li>
           <li class="nav-item inactive marginZero"><a href="/photography"
-              class="nav-link box font300-1080">PHOTOGRAPHY</a>
+              class="nav-link box ">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
+          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">ABOUT</a>
           </li>
         </ul>
 
