--- a/about/index.html
+++ b/about/index.html
@@ -140,15 +140,15 @@
       <a href="http://vickywang.me/"><img class="logo pointer" src="../icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item inactive marginZero"><a href="/" class=" nav-link box font300-1080 ">PROJECT</a>
+          <li class="nav-item inactive marginZero"><a href="/" class=" nav-link box ">PROJECT</a>
           </li>
           <li class="nav-item inactive marginZero"><a href="/architecture"
-              class="nav-link box font300-1080 ">ARCHITECTURE</a>
+              class="nav-link box ">ARCHITECTURE</a>
           </li>
           <li class="nav-item inactive marginZero"><a href="/photography"
-              class="nav-link box font300-1080 ">PHOTOGRAPHY</a>
+              class="nav-link box ">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item active greenNav marginZero"><a href="/about" class="nav-link box">ABOUT</a></li>
+          <li class="nav-item active activeNav marginZero"><a href="/about" class="nav-link box">ABOUT</a></li>
         </ul>
       </div>
       <div class="hamburger">
@@ -307,13 +307,17 @@
             <h4 data-aos="fade-up"> <strong> Commit to Ongoing Learning &#38; Iterative Improvement</strong> </h4>
 
             <ul>
-              <li class="listCircle">Stay updated with the latest UX trends, tools, and methodologies through continuous education and professional development.
+              <li class="listCircle">Stay updated with the latest UX trends, tools, and methodologies through continuous
+                education and professional development.
               </li>
-              <li class="listCircle">Regularly review and reassess existing user interfaces for opportunities to enhance usability and accessibility.
+              <li class="listCircle">Regularly review and reassess existing user interfaces for opportunities to enhance
+                usability and accessibility.
               </li>
-              <li class="listCircle">Incorporate feedback loops with users, stakeholders, and team members to foster a culture of open communication and continuous refinement.
+              <li class="listCircle">Incorporate feedback loops with users, stakeholders, and team members to foster a
+                culture of open communication and continuous refinement.
               </li>
-              <li class="listCircle">Document lessons learned from each project to build a knowledge base for future reference and to avoid repeating past mistakes.
+              <li class="listCircle">Document lessons learned from each project to build a knowledge base for future
+                reference and to avoid repeating past mistakes.
               </li>
 
             </ul>
@@ -338,9 +342,9 @@
         <div class="element">
 
           <div class="progressStepContainer">
-            <ul class="progress">
+            <ul class="progressX">
               <li class="progress__item" data-aos="fade-up">
-                <h3> <strong class="colorGrey">Art </strong> </h3>
+                <h3> <strong class="Grey700">Art </strong> </h3>
 
                 <ul>
                   <li> developed the nature of artistic experience, allows me to express our emotions
@@ -357,7 +361,7 @@
               <div class="blankHXS"></div>
 
               <li class="progress__item" data-aos="fade-up">
-                <h3> <strong class="colorGrey">Design </strong> </h3>
+                <h3> <strong class="Grey700">Design </strong> </h3>
 
                 <ul>
                   <li>having a strong creative vision</li>
@@ -368,7 +372,7 @@
               <div class="blankHXS"></div>
 
               <li class="progress__item" data-aos="fade-up">
-                <h3> <strong class="colorGrey">Architecture </strong> </h3>
+                <h3> <strong class="Grey700">Architecture </strong> </h3>
 
                 <ul>
 
@@ -437,19 +441,34 @@
           <h4 data-aos="fade-up"> <strong>UC Berkeley </strong> </h4>
           <h6 class="textItalic"> August 2015 - May 2019</h6>
           <h5>Master of Architecture </h5>
-          <h5> Building Science / Technology </h5>
+          <h5> Building Science &#38; Technology </h5>
         </div>
         <div class="element">
           <h4 data-aos="fade-up"> <strong>Beijing University of Technology </strong> </h4>
           <h6 class="textItalic"> September 2009 - July 2013</h6>
           <h5>Bachelor of Art </h5>
-          <h5> Art & Design / Landscape Design </h5>
+          <h5> Art & Design &#38; Landscape Design </h5>
         </div>
         <div class="element ">
           <h4 data-aos="fade-up"> <strong>Google UX Design Professional Certificate </strong> </h4>
           <h6 class="textItalic"> August 2021 - October 2021</h6>
           <h5>Google &#124; Coursera</h5>
           <h5> UI &#47; UX Design </h5>
+        </div>
+        <div class="element ">
+          <h4 data-aos="fade-up"> <strong>Codecademy </strong> </h4>
+          <h6 class="textItalic"> March - May 2023</h6>
+          <h5>Learn User Research: Generative</h5>
+          <h5>Learn Design Thinking: Ideation</h5>
+          <h5>Learn Interaction Design</h5>
+
+          <h5> UX Design &#47; Research</h5>
+
+<br>
+          <h5>Learn JavaScript</h5>
+          <h5> Technical Skills </h5>
+
+
         </div>
       </div>
 
@@ -459,18 +478,24 @@
           <h3>EXPERIENCE</h3>
           <div class="lineHorizS"></div>
         </div>
+        <div class="element ">
+          <h4 data-aos="fade-up"> <strong> LASO Health </strong> </h4>
+          <h6 class="textItalic"> Oct. 2023 - Present</h6>
+          <h5>San Antonio, Texas. </h5>
+          <h5>Product designer</h5>
+        </div>
 
         <div class="element ">
-          <h4 data-aos="fade-up"> <strong> BookYourPet </strong> </h4>
-          <h6 class="textItalic"> Oct. 2021 - Present</h6>
-          <h5>Calabasas, CA </h5>
-          <h5>UI/UX designer</h5>
-        </div>
-        <div class="element ">
-          <h4 data-aos="fade-up"> <strong>vickywang.me</strong> </h4>
+          <h4 data-aos="fade-up"> <strong>VW Studio</strong> </h4>
           <h6 class="textItalic"> October 2021 - Present</h6>
           <h5>Berkeley, CA </h5>
           <h5>Product designer - Freelancer</h5>
+        </div>
+        <div class="element ">
+          <h4 data-aos="fade-up"> <strong> BookYourPet </strong> </h4>
+          <h6 class="textItalic"> Oct. 2021 - Oct. 2023</h6>
+          <h5>Calabasas, CA </h5>
+          <h5>UI/UX designer</h5>
         </div>
         <div class="element ">
           <h4 data-aos="fade-up"> <strong>Buro Ole Scheeren </strong> </h4>
@@ -508,27 +533,46 @@
           <div class="lineHorizS"></div>
         </div>
         <div class="element">
-          <h4 data-aos="fade-up"> <strong>UI/UX </strong> </h4>
-          <h5> Figma, Adobe XD, Sketch </h5>
+          <h4 data-aos="fade-up"> <strong>Design Skills</strong> </h4>
+          <h5>User-Centered Design (UCD)</h5>
+          <h5>Wireframing and Prototyping</h5>
+          <h5>User Research</h5>
+          <h5>Information Architecture</h5>
+          <h5>Usability Testing</h5>
+          <h5>Interaction Design</h5>
+          <h5>Responsive and Adaptive Design</h5>
+          <h5>Visual Design</h5>
+          <h5>Analytical Skills</h5>
+          <h5>Project Management</h5>
+          <h5>Business Acumen</h5>
+
         </div>
         <div class="element">
           <h4 data-aos="fade-up"> <strong>Design Research </strong> </h4>
-          <h5>Interview & Survey </h5>
-          <h5>Empathy Maps</h5>
-          <h5>User Journey</h5>
-          <h5>Competitive audit</h5>
+          <h5>User Interviews </h5>
+          <h5>Surveys and Questionnaires</h5>
+
+          <h5>Usability Testing</h5>
+          <h5>User Personas</h5>
+          <h5>Journey Mapping</h5>
+          <h5>Heuristic Evaluation</h5>
+          <h5>Data Analysis</h5>
         </div>
         <div class="element">
-          <h4 data-aos="fade-up"> <strong>2D Graphic</strong> </h4>
-          <h5> Adobe Suite (Illustrator, Photoshop, InDesign) AutoCAD </h5>
-        </div>
-        <div class="element">
-          <h4 data-aos="fade-up"> <strong>Programming</strong> </h4>
-          <h5> HTML, CSS, JavaScript jQuery </h5>
+          <h4 data-aos="fade-up"> <strong>Technical Skills</strong> </h4>
+          <h5> HTML, CSS, JavaScript, jQuery </h5>
         </div>
 
         <div class="element">
-          <h4 data-aos="fade-up"> <strong>3D Modelling and VR </strong> </h4>
+          <h4 data-aos="fade-up"> <strong>Design Tools</strong> </h4>
+          <h5> Figma, Adobe XD, Sketch </h5>
+
+          <h5> Adobe Suite (Illustrator, Photoshop, InDesign) AutoCAD </h5>
+        </div>
+
+
+        <div class="element">
+          <h4 data-aos="fade-up"> <strong>3D Design Tools </strong> </h4>
           <h5> 3Dmax Studio, Rhino, SketchUp </h5>
           <h5> Grasshopper, Ladybug, DIVA </h5>
           <h5> Unity </h5>
@@ -581,90 +625,93 @@
 
   <div class="blankHS"></div>
   <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--1of3 ">
-      <div class="Grid-cell">
+    <div class="element">
 
-        <a href="/" class=""><img class="widthXXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-        <div class="blankHXS"></div>
+      <div class="Grid Grid--gutters Grid--1of3 ">
+        <div class="Grid-cell">
 
-        <div class="Grid Grid--gutters">
-          <div class="ClipboardBoxIconOnly">
-            <button class="ClipboardIconOnly">
-              <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
-                title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
-              <p class="clickIconCopy">vickyw.design@gmail.com</p>
-            </button>
+          <a href="/" class=""><img class="widthXXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+          <div class="blankHXS"></div>
+
+          <div class="Grid Grid--gutters">
+            <div class="ClipboardBoxIconOnly">
+              <button class="ClipboardIconOnly">
+                <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
+                  title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
+                <p class="clickIconCopy">vickyw.design@gmail.com</p>
+              </button>
+            </div>
+            <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
+            </a>
+
+            <a target="_blank" href="https://github.com/vicky-wyq">
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/git.svg" alt="GitHub"
+                title="GitHub">
+            </a>
+
+            <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
+            </a>
+
+            <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/ins.svg" alt="Instagram"
+                title="Instagram">
+            </a>
           </div>
-          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-            <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
-          </a>
-
-          <a target="_blank" href="https://github.com/vicky-wyq">
-            <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/git.svg" alt="GitHub"
-              title="GitHub">
-          </a>
-
-          <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-            <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
-          </a>
-
-          <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-            <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/ins.svg" alt="Instagram"
-              title="Instagram">
-          </a>
+          <div class="blankHXS"></div>
         </div>
-        <div class="blankHXS"></div>
-      </div>
-      <div class="Grid-cell">
-        <div class="Grid Grid--gutters Grid--cols-6">
-          <div class="Grid-cell">
-            <h5> <strong> Project </strong> </h5>
-            <div class="blankHXXS"></div>
-            <a href="/glorify/">
-              <h6> <strong class="Grey700">Glorify</strong> </h6>
-            </a>
+        <div class="Grid-cell">
+          <div class="Grid Grid--gutters Grid--cols-6">
+            <div class="Grid-cell">
+              <h5> <strong> Project </strong> </h5>
+              <div class="blankHXXS"></div>
+              <a href="/glorify/">
+                <h6> <strong class="Grey700">Glorify</strong> </h6>
+              </a>
 
-            <h6>Elevating Community Involvement</h6>
-            <div class="blankHXXS"></div>
-            <a href="/appointa/">
-              <h6> <strong class="Grey700">APPOINTA</strong> </h6>
-            </a>
-            <h6>Simplifying Interview Coordination</h6>
-            <div class="blankHXXS"></div>
-            <a href="/seer/">
-              <h6> <strong class="Grey700">SEER</strong> </h6>
-            </a>
-            <h6>Empowering Brand Managers with Insights</h6>
-          </div>
+              <h6>Elevating Community Involvement</h6>
+              <div class="blankHXXS"></div>
+              <a href="/appointa/">
+                <h6> <strong class="Grey700">APPOINTA</strong> </h6>
+              </a>
+              <h6>Simplifying Interview Coordination</h6>
+              <div class="blankHXXS"></div>
+              <a href="/seer/">
+                <h6> <strong class="Grey700">SEER</strong> </h6>
+              </a>
+              <h6>Empowering Brand Managers with Insights</h6>
+            </div>
 
-          <div class="Grid-cell">
-            <h5> <strong> Service </strong> </h5>
-            <div class="blankHXXS"></div>
+            <div class="Grid-cell">
+              <h5> <strong> Service </strong> </h5>
+              <div class="blankHXXS"></div>
 
-            <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
-            <h6>Creating Intuitive User Experiences</h6>
-            <div class="blankHXXS"></div>
+              <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
+              <h6>Creating Intuitive User Experiences</h6>
+              <div class="blankHXXS"></div>
 
-            <h6> <strong class="Grey700">Design Research </strong> </h6>
-            <h6>In-depth Analysis for Targeted Solutions</h6>
-            <div class="blankHXXS"></div>
+              <h6> <strong class="Grey700">Design Research </strong> </h6>
+              <h6>In-depth Analysis for Targeted Solutions</h6>
+              <div class="blankHXXS"></div>
 
-            <h6> <strong class="Grey700">Web Development </strong> </h6>
-            <h6>Seamless Design Implementation</h6>
-            <div class="blankHXXS"></div>
+              <h6> <strong class="Grey700">Web Development </strong> </h6>
+              <h6>Seamless Design Implementation</h6>
+              <div class="blankHXXS"></div>
 
-            <h6> <strong class="Grey700">Branding </strong> </h6>
-            <h6>Crafting Memorable Brand Identities</h6>
-          </div>
+              <h6> <strong class="Grey700">Branding </strong> </h6>
+              <h6>Crafting Memorable Brand Identities</h6>
+            </div>
 
-          <div class="Grid-cell">
-            <h5> <strong> About </strong> </h5>
-            <div class="blankHXXS"></div>
+            <div class="Grid-cell">
+              <h5> <strong> About </strong> </h5>
+              <div class="blankHXXS"></div>
 
-            <a href="/about">
-              <h6>About me</h6>
-            </a>
-            <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
+              <a href="/about">
+                <h6>About me</h6>
+              </a>
+              <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
+            </div>
           </div>
         </div>
 
@@ -677,7 +724,7 @@
   <div class="blankHS"></div>
   <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
-      <div class="element footerBorder">
+      <div class=" footerBorder">
         <div class="element">
           <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
         </div>
