--- a/architecture/LACAMA/index.html
+++ b/architecture/LACAMA/index.html
@@ -114,31 +114,34 @@
   </div>
   <!--progressBarScroll-->
   <!-- header -->
-  <nav class="header" id="header">
-    <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer colorBlack">VW</a>
-      <div class="navbar">
-        <ul class="nav-menu">
-          <li class="nav-item inactive marginZero"><a href="/" class="nav-link box font300-1080 ">PROJECT</a>
-          </li>
-          <li class="nav-item active greenNav marginZero"><a href="/architecture" class="nav-link box">ARCHITECTURE</a>
-          </li>
-          <li class="nav-item inactive marginZero"><a href="/photography"
-              class="nav-link box font300-1080 ">PHOTOGRAPHY</a>
-          </li>
-          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
-          </li>
-        </ul>
+  <header>
+    <nav class="header" id="header">
+      <div class="backgroundColorNav">
+        <a href="http://vickywang.me/"><img class="logo pointer" src="../../icon/LOGO.svg" alt="VW"
+            title="vickywang.me"></a>
+        <div class="navbar">
+          <ul class="nav-menu">
+            <li class="nav-item inactive marginZero"><a href="/" class="nav-link box">PROJECT</a>
+            </li>
+            <li class="nav-item active activeNav marginZero"><a href="/architecture"
+                class="nav-link box">ARCHITECTURE</a>
+            </li>
+            <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
+            </li>
+            <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">ABOUT</a>
+            </li>
+          </ul>
+        </div>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
       </div>
-
-      <div class="hamburger">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
-    </div>
-  </nav>
+    </nav>
+  </header>
   <!-- header -->
+
   <div class="blankHL"></div>
   <!-- cover -->
   <div class="wrapper">
@@ -149,11 +152,19 @@
         </div>
       </div>
       <div class="Grid-cell">
-        <div class="element">
-          <h4>LACMA </h4>
-          <p class="lineHorizAll"></p>
-          <h6>Problem cloud study to urbanism building design</h6>
-        </div>
+          <div class="element">
+              <div class="elementInner">
+                <h3 class="" data-aos="fade-up"><strong>LACAMA</strong></h3>
+
+                <p class="lineHorizAll"></p>
+                <h6 class=""> <strong>Studio:</strong> &nbsp; ARCH 201 </h6>
+                <h6><strong>Duration: </strong> <span class="textItalic">&nbsp;Fall 2016 | One
+                    Semester</span> </h6>
+                <h6> <strong>Project:</strong> &nbsp; M. Arch, CED, UC Berkeley</h6>
+                <h6> <strong>Site:</strong> &nbsp; Los Angeles County Museum of Art</h6>
+                <h6> <strong>Instructor:</strong> &nbsp; Mark Anderson, Andrew Zago</h6>
+            </div>
+          </div>
       </div>
 
     </div>
@@ -162,16 +173,13 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
-    <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Problem Cloud </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
-      </div>
+
+  <div class="wrapper">
+    <div class="element">
+      <p class="tArrow">Problem Cloud <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
   </div>
-  <!--Arrow-->
+
   <div class="blankHS"></div>
   <!-- problem cloud -->
   <div class="wrapper">
@@ -219,16 +227,13 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
-    <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> The Cloud </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
-      </div>
+
+  <div class="wrapper">
+    <div class="element">
+      <p class="tArrow">The Cloud <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
   </div>
-  <!--Arrow-->
+
   <div class="blankHS"></div>
   <!-- the cloud -->
   <div class="wrapper">
@@ -309,16 +314,12 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
-    <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> COLOR & LAYERS </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
-      </div>
+
+  <div class="wrapper">
+    <div class="element">
+      <p class="tArrow"> COLOR & LAYERS <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
   </div>
-  <!--Arrow-->
   <div class="blankHS"></div>
   <!-- CaseStudy1-->
   <div class="wrapper">
@@ -342,16 +343,13 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
+
   <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
-    <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Boxes </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
-      </div>
+  <div class="wrapper">
+    <div class="element">
+      <p class="tArrow"> Boxes <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
   </div>
-  <!--Arrow-->
   <div class="blankHS"></div>
   <!--render -->
   <div class="wrapper">
@@ -376,13 +374,10 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
-    <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Site and City </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
-      </div>
+
+  <div class="wrapper">
+    <div class="element">
+      <p class="tArrow"> Site & City <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
   </div>
   <!--Arrow-->
@@ -478,12 +473,10 @@
   <hr>
   <div class="blankHM"></div>
   <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
-    <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Plans </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
-      </div>
+
+  <div class="wrapper">
+    <div class="element">
+      <p class="tArrow"> Plans <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
   </div>
   <!--Arrow-->
@@ -579,12 +572,10 @@
   <hr>
   <div class="blankHM"></div>
   <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
-    <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Sections and Elevations </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
-      </div>
+
+  <div class="wrapper">
+    <div class="element">
+      <p class="tArrow"> Sections & Elevations <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
   </div>
   <!--Arrow-->
@@ -650,28 +641,121 @@
     </div>
   </button>
   <!--back to top-->
-  <!--footer-->
-  <footer class="GreyBg100">
-    <div class="">
-      <div class="footer">
-        <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
-        <div class="footer-right">
-          <a href="mailto:vickyw.design@gmail.com">
-            <img class="footer-logo" src="../../icon/mail.svg" alt="email">
-          </a>
-          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
-            <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
-          </a>
-          <a target="_blank" href="https://github.com/vicky-wyq">
-            <img class="footer-logo" src="../../icon/git.svg" alt="github">
-          </a>
-          <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-            <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
-          </a>
+
+<!--footer-->
+<footer class="GreyBg100">
+
+  <div class="blankHS"></div>
+  <div class="wrapper">
+    <div class="element">
+
+      <div class="Grid Grid--gutters Grid--1of3 ">
+        <div class="Grid-cell">
+
+          <a href="/" class=""><img class="widthXXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+          <div class="blankHXS"></div>
+
+          <div class="Grid Grid--gutters">
+            <div class="ClipboardBoxIconOnly">
+              <button class="ClipboardIconOnly">
+                <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
+                  title="Copy to Clipboard" src="../../icon/mail.svg" alt="LinkedIn">
+                <p class="clickIconCopy">vickyw.design@gmail.com</p>
+              </button>
+            </div>
+            <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/in.svg" alt="LinkedIn">
+            </a>
+
+            <a target="_blank" href="https://github.com/vicky-wyq">
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/git.svg" alt="GitHub"
+                title="GitHub">
+            </a>
+
+            <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/Codepen.svg" alt="CodePen">
+            </a>
+
+            <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/ins.svg" alt="Instagram"
+                title="Instagram">
+            </a>
+          </div>
+          <div class="blankHXS"></div>
+        </div>
+        <div class="Grid-cell">
+          <div class="Grid Grid--gutters Grid--cols-6">
+            <div class="Grid-cell">
+              <h5> <strong> Project </strong> </h5>
+              <div class="blankHXXS"></div>
+              <a href="/glorify/">
+                <h6> <strong class="Grey700">Glorify</strong> </h6>
+              </a>
+
+              <h6>Elevating Community Involvement</h6>
+              <div class="blankHXXS"></div>
+              <a href="/appointa/">
+                <h6> <strong class="Grey700">APPOINTA</strong> </h6>
+              </a>
+              <h6>Simplifying Interview Coordination</h6>
+              <div class="blankHXXS"></div>
+              <a href="/seer/">
+                <h6> <strong class="Grey700">SEER</strong> </h6>
+              </a>
+              <h6>Empowering Brand Managers with Insights</h6>
+            </div>
+
+            <div class="Grid-cell">
+              <h5> <strong> Service </strong> </h5>
+              <div class="blankHXXS"></div>
+
+              <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
+              <h6>Creating Intuitive User Experiences</h6>
+              <div class="blankHXXS"></div>
+
+              <h6> <strong class="Grey700">Design Research </strong> </h6>
+              <h6>In-depth Analysis for Targeted Solutions</h6>
+              <div class="blankHXXS"></div>
+
+              <h6> <strong class="Grey700">Web Development </strong> </h6>
+              <h6>Seamless Design Implementation</h6>
+              <div class="blankHXXS"></div>
+
+              <h6> <strong class="Grey700">Branding </strong> </h6>
+              <h6>Crafting Memorable Brand Identities</h6>
+            </div>
+
+            <div class="Grid-cell">
+              <h5> <strong> About </strong> </h5>
+              <div class="blankHXXS"></div>
+
+              <a href="/about">
+                <h6>About me</h6>
+              </a>
+              <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+
+
+  <div class="blankHS"></div>
+  <div class="Grid Grid--full wrapper">
+    <div class="Grid-cell">
+      <div class=" footerBorder">
+        <div class="element">
+          <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
         </div>
       </div>
     </div>
-  </footer>
+  </div>
+
+</footer>
+<!--footer-->
 </body>
 
 
