--- a/architecture/narrow_stripes/index.html
+++ b/architecture/narrow_stripes/index.html
@@ -15,8 +15,7 @@
   <!-- Basic Metadata -->
   <meta name="keywords"
     content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
-  <meta name="description"
-    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
+  <meta name="description" content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
 ">
 
   <!-- Open Graph / Facebook -->
@@ -124,30 +123,32 @@
   </div>
   <!--progressBarScroll-->
   <!-- header -->
-  <nav class="header" id="header">
-    <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer colorBlack">VW</a>
-      <div class="navbar">
-        <ul class="nav-menu">
-          <li class="nav-item inactive marginZero"><a href="/" class="nav-link box font300-1080 ">PROJECT</a>
-          </li>
-          <li class="nav-item active greenNav marginZero"><a href="/architecture" class="nav-link box">ARCHITECTURE</a>
-          </li>
-          <li class="nav-item inactive marginZero"><a href="/photography"
-              class="nav-link box font300-1080 ">PHOTOGRAPHY</a>
-          </li>
-          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
-          </li>
-        </ul>
+  <header>
+    <nav class="header" id="header">
+      <div class="backgroundColorNav">
+        <a href="http://vickywang.me/"><img class="logo pointer" src="../../icon/LOGO.svg" alt="VW"
+            title="vickywang.me"></a>
+        <div class="navbar">
+          <ul class="nav-menu">
+            <li class="nav-item inactive marginZero"><a href="/" class="nav-link box">PROJECT</a>
+            </li>
+            <li class="nav-item active activeNav marginZero"><a href="/architecture"
+                class="nav-link box">ARCHITECTURE</a>
+            </li>
+            <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
+            </li>
+            <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">ABOUT</a>
+            </li>
+          </ul>
+        </div>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
       </div>
-
-      <div class="hamburger">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
-    </div>
-  </nav>
+    </nav>
+  </header>
   <!-- header -->
   <div class="blankHL"></div>
   <!-- cover -->
@@ -172,16 +173,19 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
+
+  <!-- Arrow -->
+  <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Programs and Diagrams </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <div class="element">
+        <h2 class="tArrow"> Programs and Diagrams<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+        </h2>
       </div>
     </div>
   </div>
-  <!--Arrow-->
+  <!-- Arrow -->
+
+
   <div class="blankHM"></div>
   <!-- cover -->
   <div class="wrapper">
@@ -205,16 +209,17 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
+
+  <!-- Arrow -->
+  <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Renders </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <div class="element">
+        <h2 class="tArrow"> Renders<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+        </h2>
       </div>
     </div>
   </div>
-  <!--Arrow-->
+  <!-- Arrow -->
   <div class="blankHM"></div>
   <!-- cover -->
   <div class="wrapper">
@@ -238,16 +243,17 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
+
+  <!-- Arrow -->
+  <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Site and Floor Plan </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <div class="element">
+        <h2 class="tArrow"> Site and Floor Plan<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+        </h2>
       </div>
     </div>
   </div>
-  <!--Arrow-->
+  <!-- Arrow -->
   <div class="blankHM"></div>
   <!-- site plan -->
   <div class="wrapper">
@@ -290,18 +296,21 @@
     </div>
   </div>
   <!-- site -->
-  <div class="blankHXL"></div>
+  <!-- message -->
+  <div class="blankHM"></div>
+  <div class="Grid Grid--full u-textCenter">
+    <div class="Grid-cell">
+      <div data-aos="fade-up">
+        <h4 class="element">
+          Thank You for Visiting &#33; Check back soon for more updates and stay tuned &#33;
+        </h4>
+      </div>
+      <a href="/" class=""><img class="widthXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+    </div>
+  </div>
+  <div class="blankHM"></div>
 
-
-
-
-  <p class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
-  <p class="textM centerHorz" data-aos="fade-up">please email me for professional projects</p>
-  <div class="blank-lineheight-s"></div>
-
-
-
-  <div class="blankHXL"></div>
+  <!-- message -->
   <!--back to top-->
   <button id="myBtn" title="Back to top">
     <div id="dad">
@@ -316,26 +325,118 @@
   <!--back to top-->
   <!--footer-->
   <footer class="GreyBg100">
-    <div class="">
-      <div class="footer">
-        <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
-        <div class="footer-right">
-          <a href="mailto:vickyw.design@gmail.com">
-            <img class="footer-logo" src="../../icon/mail.svg" alt="email">
-          </a>
-          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
-            <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
-          </a>
-          <a target="_blank" href="https://github.com/vicky-wyq">
-            <img class="footer-logo" src="../../icon/git.svg" alt="github">
-          </a>
-          <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-            <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
-          </a>
+
+    <div class="blankHS"></div>
+    <div class="wrapper">
+      <div class="element">
+
+        <div class="Grid Grid--gutters Grid--1of3 ">
+          <div class="Grid-cell">
+
+            <a href="/" class=""><img class="widthXXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+            <div class="blankHXS"></div>
+
+            <div class="Grid Grid--gutters">
+              <div class="ClipboardBoxIconOnly">
+                <button class="ClipboardIconOnly">
+                  <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
+                    title="Copy to Clipboard" src="../../icon/mail.svg" alt="LinkedIn">
+                  <p class="clickIconCopy">vickyw.design@gmail.com</p>
+                </button>
+              </div>
+              <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/in.svg" alt="LinkedIn">
+              </a>
+
+              <a target="_blank" href="https://github.com/vicky-wyq">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/git.svg" alt="GitHub"
+                  title="GitHub">
+              </a>
+
+              <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/Codepen.svg" alt="CodePen">
+              </a>
+
+              <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/ins.svg" alt="Instagram"
+                  title="Instagram">
+              </a>
+            </div>
+            <div class="blankHXS"></div>
+          </div>
+          <div class="Grid-cell">
+            <div class="Grid Grid--gutters Grid--cols-6">
+              <div class="Grid-cell">
+                <h5> <strong> Project </strong> </h5>
+                <div class="blankHXXS"></div>
+                <a href="/glorify/">
+                  <h6> <strong class="Grey700">Glorify</strong> </h6>
+                </a>
+
+                <h6>Elevating Community Involvement</h6>
+                <div class="blankHXXS"></div>
+                <a href="/appointa/">
+                  <h6> <strong class="Grey700">APPOINTA</strong> </h6>
+                </a>
+                <h6>Simplifying Interview Coordination</h6>
+                <div class="blankHXXS"></div>
+                <a href="/seer/">
+                  <h6> <strong class="Grey700">SEER</strong> </h6>
+                </a>
+                <h6>Empowering Brand Managers with Insights</h6>
+              </div>
+
+              <div class="Grid-cell">
+                <h5> <strong> Service </strong> </h5>
+                <div class="blankHXXS"></div>
+
+                <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
+                <h6>Creating Intuitive User Experiences</h6>
+                <div class="blankHXXS"></div>
+
+                <h6> <strong class="Grey700">Design Research </strong> </h6>
+                <h6>In-depth Analysis for Targeted Solutions</h6>
+                <div class="blankHXXS"></div>
+
+                <h6> <strong class="Grey700">Web Development </strong> </h6>
+                <h6>Seamless Design Implementation</h6>
+                <div class="blankHXXS"></div>
+
+                <h6> <strong class="Grey700">Branding </strong> </h6>
+                <h6>Crafting Memorable Brand Identities</h6>
+              </div>
+
+              <div class="Grid-cell">
+                <h5> <strong> About </strong> </h5>
+                <div class="blankHXXS"></div>
+
+                <a href="/about">
+                  <h6>About me</h6>
+                </a>
+                <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
+
+    <div class="blankHS"></div>
+    <div class="Grid Grid--full wrapper">
+      <div class="Grid-cell">
+        <div class=" footerBorder">
+          <div class="element">
+            <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
+          </div>
         </div>
       </div>
     </div>
+
   </footer>
+  <!--footer-->
 
 </body>
 
