--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 
 <head>
@@ -6,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-  <meta name="title" content="Vicky W. | Manifold Groud">
+  <meta name="title" content="Vicky W. | Recreation Commons">
   <title>Vicky W. | Recreation Commons</title>
   <link rel="canonical" href="https://vickywang.me/architecture/recreation_commons/">
   <meta name="author" content="Vicky W.">
@@ -24,11 +26,11 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property='og:title' content="Vicky Wang | LACAMA" />
+  <meta property='og:title' content="Vicky Wang | Recreation Commons" />
   <meta property='og:description'
     content='Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email' />
   <meta property='og:url' content="https://vickywang.me" />
-  <meta property="og:site_name" content="Vicky's Website LACAMA">
+  <meta property="og:site_name" content="Vicky's Website | Recreation Commons">
 
   <meta property='og:image' content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
   <meta property="og:image:width" content="1200">
@@ -44,15 +46,6 @@
   <meta name="twitter:url" content="//vickywang.me/">
   <meta name="twitter:creator" content="VICKY WANG" />
   <!-- twitter -->
-
-
-
-
-
-
-
-
-
 
   <link rel="stylesheet" href="../../main.css">
   <script type="text/javascript" src="../../scripts.js"></script>
@@ -115,40 +108,6 @@
   </script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 
-
-
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Vicky Wang - Product Designer</title>
-  <meta name="description" content="Vicky Wang's Portfolio">
-  <meta name="keywords"
-    content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
-  <meta name="author" content="Vicky Wang">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <meta property="og:site_name" content="VICKY WANG">
-  <meta property="og:url" content="/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="VICKY WANG" />
-  <meta property="og:description" content="Hi! Thanks for stopping by. 
-    I enjoy design and code who loves solving challenging problems. 
-    Interested in what you see? Shoot me an email :) " />
-  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="750">
-  <meta property="og:image:height" content="750">
-
-  <meta name="twitter:url" content="//vickywang.design">
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="VICKY WANG" />
-  <meta name="twitter:creator" content="VICKY WANG" />
-  <meta property="twitter:title" content="VICKY WANG">
-  <meta property="twitter:description"
-    content="Hi! Thanks for stopping by. I’m a product designer based in San Francisco. I'm a former architectural designer with a passion for solving business challenges through design and occasionally code. If you like what you see here, please feel free to reach out to me at vickyw.design@gmail.com :)">
-  <meta name="twitter:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/thumbnail.jpg">
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="750">
-  <meta property="og:image:height" content="750">
 </head>
 
 
@@ -161,32 +120,32 @@
   </div>
   <!--progressBarScroll-->
   <!-- header -->
-  <nav class="header" id="header">
-    <div class="backgroundColorNav">
-
-      <a href="http://vickywang.me/" class="logo pointer colorBlack">VW</a>
-
-      <div class="navbar">
-        <ul class="nav-menu">
-          <li class="nav-item inactive marginZero"><a href="/" class="nav-link box font300-1080 ">PROJECT</a>
-          </li>
-          <li class="nav-item active greenNav marginZero"><a href="/architecture" class="nav-link box">ARCHITECTURE</a>
-          </li>
-          <li class="nav-item inactive marginZero"><a href="/photography"
-              class="nav-link box font300-1080 ">PHOTOGRAPHY</a>
-          </li>
-          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
-          </li>
-        </ul>
+  <header>
+    <nav class="header" id="header">
+      <div class="backgroundColorNav">
+        <a href="http://vickywang.me/"><img class="logo pointer" src="../../icon/LOGO.svg" alt="VW"
+            title="vickywang.me"></a>
+        <div class="navbar">
+          <ul class="nav-menu">
+            <li class="nav-item inactive marginZero"><a href="/" class="nav-link box">PROJECT</a>
+            </li>
+            <li class="nav-item active activeNav marginZero"><a href="/architecture"
+                class="nav-link box">ARCHITECTURE</a>
+            </li>
+            <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
+            </li>
+            <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">ABOUT</a>
+            </li>
+          </ul>
+        </div>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
       </div>
-
-      <div class="hamburger">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
-    </div>
-  </nav>
+    </nav>
+  </header>
   <!-- header -->
 
   <div class="blankHM"></div>
@@ -529,19 +488,22 @@
   </div>
 
 
-  <div class="blankHL"></div>
 
+<!-- message -->
+<div class="blankHM"></div>
+<div class="Grid Grid--full u-textCenter">
+  <div class="Grid-cell">
+    <div data-aos="fade-up">
+      <h4 class="element">
+        Thank You for Visiting &#33; Check back soon for more updates and stay tuned &#33;
+      </h4>
+    </div>
+    <a href="/" class=""><img class="widthXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+  </div>
+</div>
+<div class="blankHM"></div>
 
-
-</body>
-
-
-
-
-
-<!--body-->
-
-
+<!-- message -->
 <!--back to top-->
 <button id="myBtn" class=" myBtn-1550" title="Go to top">
   <img id="bottom-arrow" class="ArrowHover" src="../../icon/arrow-top.svg" alt="back to top">
@@ -556,91 +518,93 @@
 
   <div class="blankHS"></div>
   <div class="wrapper">
+    <div class="element">
 
-    <div class="Grid Grid--gutters Grid--1of3 ">
-      <div class="Grid-cell">
+      <div class="Grid Grid--gutters Grid--1of3 ">
+        <div class="Grid-cell">
 
-        <a href="/" class=""><img class="widthXXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-        <div class="blankHXS"></div>
+          <a href="/" class=""><img class="widthXXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+          <div class="blankHXS"></div>
 
-        <div class="Grid Grid--gutters">
-          <div class="ClipboardBoxIconOnly">
-            <button class="ClipboardIconOnly">
-              <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
-                title="Copy to Clipboard" src="../../icon/mail.svg" alt="LinkedIn">
-              <p class="clickIconCopy">vickyw.design@gmail.com</p>
-            </button>
+          <div class="Grid Grid--gutters">
+            <div class="ClipboardBoxIconOnly">
+              <button class="ClipboardIconOnly">
+                <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
+                  title="Copy to Clipboard" src="../../icon/mail.svg" alt="LinkedIn">
+                <p class="clickIconCopy">vickyw.design@gmail.com</p>
+              </button>
+            </div>
+            <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/in.svg" alt="LinkedIn">
+            </a>
+
+            <a target="_blank" href="https://github.com/vicky-wyq">
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/git.svg" alt="GitHub"
+                title="GitHub">
+            </a>
+
+            <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/Codepen.svg" alt="CodePen">
+            </a>
+
+            <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/ins.svg" alt="Instagram"
+                title="Instagram">
+            </a>
           </div>
-          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-            <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/in.svg" alt="LinkedIn">
-          </a>
-
-          <a target="_blank" href="https://github.com/vicky-wyq">
-            <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/git.svg" alt="GitHub"
-              title="GitHub">
-          </a>
-
-          <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-            <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/Codepen.svg" alt="CodePen">
-          </a>
-
-          <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-            <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/ins.svg" alt="Instagram"
-              title="Instagram">
-          </a>
+          <div class="blankHXS"></div>
         </div>
-        <div class="blankHXS"></div>
-      </div>
-      <div class="Grid-cell">
-        <div class="Grid Grid--gutters Grid--cols-6">
-          <div class="Grid-cell">
-            <h5> <strong> Project </strong> </h5>
-            <div class="blankHXXS"></div>
-            <a href="/glorify/">
-              <h6> <strong class="Grey700">Glorify</strong> </h6>
-            </a>
+        <div class="Grid-cell">
+          <div class="Grid Grid--gutters Grid--cols-6">
+            <div class="Grid-cell">
+              <h5> <strong> Project </strong> </h5>
+              <div class="blankHXXS"></div>
+              <a href="/glorify/">
+                <h6> <strong class="Grey700">Glorify</strong> </h6>
+              </a>
 
-            <h6>Elevating Community Involvement</h6>
-            <div class="blankHXXS"></div>
-            <a href="/appointa/">
-              <h6> <strong class="Grey700">APPOINTA</strong> </h6>
-            </a>
-            <h6>Simplifying Interview Coordination</h6>
-            <div class="blankHXXS"></div>
-            <a href="/seer/">
-              <h6> <strong class="Grey700">SEER</strong> </h6>
-            </a>
-            <h6>Empowering Brand Managers with Insights</h6>
-          </div>
+              <h6>Elevating Community Involvement</h6>
+              <div class="blankHXXS"></div>
+              <a href="/appointa/">
+                <h6> <strong class="Grey700">APPOINTA</strong> </h6>
+              </a>
+              <h6>Simplifying Interview Coordination</h6>
+              <div class="blankHXXS"></div>
+              <a href="/seer/">
+                <h6> <strong class="Grey700">SEER</strong> </h6>
+              </a>
+              <h6>Empowering Brand Managers with Insights</h6>
+            </div>
 
-          <div class="Grid-cell">
-            <h5> <strong> Service </strong> </h5>
-            <div class="blankHXXS"></div>
+            <div class="Grid-cell">
+              <h5> <strong> Service </strong> </h5>
+              <div class="blankHXXS"></div>
 
-            <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
-            <h6>Creating Intuitive User Experiences</h6>
-            <div class="blankHXXS"></div>
+              <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
+              <h6>Creating Intuitive User Experiences</h6>
+              <div class="blankHXXS"></div>
 
-            <h6> <strong class="Grey700">Design Research </strong> </h6>
-            <h6>In-depth Analysis for Targeted Solutions</h6>
-            <div class="blankHXXS"></div>
+              <h6> <strong class="Grey700">Design Research </strong> </h6>
+              <h6>In-depth Analysis for Targeted Solutions</h6>
+              <div class="blankHXXS"></div>
 
-            <h6> <strong class="Grey700">Web Development </strong> </h6>
-            <h6>Seamless Design Implementation</h6>
-            <div class="blankHXXS"></div>
+              <h6> <strong class="Grey700">Web Development </strong> </h6>
+              <h6>Seamless Design Implementation</h6>
+              <div class="blankHXXS"></div>
 
-            <h6> <strong class="Grey700">Branding </strong> </h6>
-            <h6>Crafting Memorable Brand Identities</h6>
-          </div>
+              <h6> <strong class="Grey700">Branding </strong> </h6>
+              <h6>Crafting Memorable Brand Identities</h6>
+            </div>
 
-          <div class="Grid-cell">
-            <h5> <strong> About </strong> </h5>
-            <div class="blankHXXS"></div>
+            <div class="Grid-cell">
+              <h5> <strong> About </strong> </h5>
+              <div class="blankHXXS"></div>
 
-            <a href="/about">
-              <h6>About me</h6>
-            </a>
-            <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
+              <a href="/about">
+                <h6>About me</h6>
+              </a>
+              <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
+            </div>
           </div>
         </div>
 
@@ -649,10 +613,11 @@
 
   </div>
 
+
   <div class="blankHS"></div>
   <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
-      <div class="element footerBorder">
+      <div class=" footerBorder">
         <div class="element">
           <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
         </div>
@@ -662,6 +627,14 @@
 
 </footer>
 <!--footer-->
-</div>
+
+</body>
+
+
+
+
+
+
+
 
 </html>
