--- a/architecture/the_rotation_of_curves/index.html
+++ b/architecture/the_rotation_of_curves/index.html
@@ -25,15 +25,15 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
   <!--font using hello-->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <!--font     font-family: 'Catamaran', sans-serif; -->
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
   <!--font font-family: 'Lato', sans-serif; -->
 
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <!--font awesome -->
 
 
@@ -45,21 +45,17 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- crypto js -->
 
-  <script type="text/javascript"
-    src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!--jQuery-->
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!--aos-->
-  <script type="text/javascript"
-    src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
+  <script type="text/javascript" src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
   <!-- gsap -tool-bar-->
-  <script type="text/javascript"
-    src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
+  <script type="text/javascript" src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
   <!-- gsap - tool-bar-->
 
-  <script type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
   <!-- gsap - ScrollTrigger-->
   <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
   <!-- gsap - ScrollTrigger-->
@@ -75,40 +71,6 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
 
 
-
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Vicky Wang - Product Designer</title>
-  <meta name="description" content="Vicky Wang's Portfolio">
-  <meta name="keywords"
-    content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
-  <meta name="author" content="Vicky Wang">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <meta property="og:site_name" content="VICKY WANG">
-  <meta property="og:url" content="/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="VICKY WANG" />
-  <meta property="og:description" content="Hi! Thanks for stopping by. 
-        I enjoy design and code who loves solving challenging problems. 
-        Interested in what you see? Shoot me an email :) " />
-  <meta property="og:image"
-    content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="750">
-  <meta property="og:image:height" content="750">
-
-  <meta name="twitter:url" content="//vickywang.design">
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="VICKY WANG" />
-  <meta name="twitter:creator" content="VICKY WANG" />
-  <meta property="twitter:title" content="VICKY WANG">
-  <meta property="twitter:description"
-    content="Hi! Thanks for stopping by. I’m a product designer based in San Francisco. I'm a former architectural designer with a passion for solving business challenges through design and occasionally code. If you like what you see here, please feel free to reach out to me at vickyw.design@gmail.com :)">
-  <meta name="twitter:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/thumbnail.jpg">
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="750">
-  <meta property="og:image:height" content="750">
 </head>
 
 <body>
@@ -120,29 +82,34 @@
   </div>
   <!--progressBarScroll-->
   <!-- header -->
-  <nav class="header">
-    <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer">VW
-      </a>
-      <div class="navbar">
-        <ul class="nav-menu">
-          <li class="nav-item inactive box marginZero"><a href="/project" class="nav-link">PROJECT</a></li>
-          <li class="nav-item active box marginZero"><a href="/architecture" class="nav-link">ARCHITECTURE</a>
-          </li>
-          <li class="nav-item inactive box marginZero"><a href="/photography" class="nav-link">PHOTOGRAPHY</a>
-          </li>
-          <li class="nav-item inactive box marginZero"><a href="/" class="nav-link">ABOUT</a></li>
-        </ul>
+  <header>
+    <nav class="header" id="header">
+      <div class="backgroundColorNav">
+        <a href="http://vickywang.me/"><img class="logo pointer" src="../../icon/LOGO.svg" alt="VW"
+            title="vickywang.me"></a>
+        <div class="navbar">
+          <ul class="nav-menu">
+            <li class="nav-item inactive marginZero"><a href="/" class="nav-link box">PROJECT</a>
+            </li>
+            <li class="nav-item active activeNav marginZero"><a href="/architecture"
+                class="nav-link box">ARCHITECTURE</a>
+            </li>
+            <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
+            </li>
+            <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">ABOUT</a>
+            </li>
+          </ul>
+        </div>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
       </div>
-
-      <div class="hamburger">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
-    </div>
-  </nav>
+    </nav>
+  </header>
   <!-- header -->
+
   <div class="blankHL"></div>
   <!-- cover -->
   <div class="wrapper">
@@ -154,9 +121,16 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <h4>THE ROTATION OF CURVES</h4>
+          <h3 class="" data-aos="fade-up"><strong>THE ROTATION OF CURVES</strong></h3>
+
           <p class="lineHorizAll"></p>
-          <h6>Foam finding and geometry manipulation</h6>
+          <h6 class=""> <strong>Studio:</strong> &nbsp; Introduction to Architecture Studio 1
+          </h6>
+          <h6><strong>Duration: </strong> <span class="textItalic">&nbsp;Fall 2015 | 1
+              Semester</span> </h6>
+          <h6> <strong>Project:</strong> &nbsp;Summer Program, CED, UC Berkeley</h6>
+          <h6> <strong>Site:</strong> &nbsp; - </h6>
+          <h6> <strong>Instructor:</strong> &nbsp; Rudabeh Pakravan</h6>
         </div>
       </div>
 
@@ -164,16 +138,17 @@
   </div>
   <!-- cover -->
   <div class="blankHL"></div>
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
+  <!-- Arrow -->
+  <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> PART 1 THE ISLAND </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <div class="element">
+        <h2 class="tArrow"> PART 1 THE ISLAND <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+        </h2>
       </div>
     </div>
   </div>
-  <!--Arrow-->
+  <!-- Arrow -->
+
   <div class="blankHS"></div>
 
   <!--geometry-->
@@ -217,16 +192,17 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
+
+  <!-- Arrow -->
+  <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> PART 2 THE FOAM </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <div class="element">
+        <h2 class="tArrow"> PART 2 THE FOAME <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+        </h2>
       </div>
     </div>
   </div>
-  <!--Arrow-->
+  <!-- Arrow -->
   <div class="blankHM"></div>
   <!--foam-->
   <div class="wrapper">
@@ -297,16 +273,17 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
+  <!-- Arrow -->
+  <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> PART 3 THE HOUSE </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <div class="element">
+        <h2 class="tArrow"> PART 3 THE HOUSE <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+        </h2>
       </div>
     </div>
   </div>
-  <!--Arrow-->
+  <!-- Arrow -->
+
   <div class="blankHL"></div>
 
   <!--Site -->
@@ -396,11 +373,21 @@
   </div>
   <!--renders -->
 
-  <div class="blankHXL"></div>
-  <p class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
-  <p class="textM centerHorz" data-aos="fade-up">please email me for professional projects</p>
-  <div class="blank-lineheight-s"></div>
-  <div class="blankHXL"></div>
+  <!-- message -->
+  <div class="blankHM"></div>
+  <div class="Grid Grid--full u-textCenter">
+    <div class="Grid-cell">
+      <div data-aos="fade-up">
+        <h4 class="element">
+          Thank You for Visiting &#33; Check back soon for more updates and stay tuned &#33;
+        </h4>
+      </div>
+      <a href="/" class=""><img class="widthXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+    </div>
+  </div>
+  <div class="blankHM"></div>
+
+  <!-- message -->
 
   <!--back to top-->
   <button id="myBtn" title="Back to top">
@@ -414,112 +401,121 @@
     </div>
   </button>
   <!--back to top-->
-<!--footer-->
-<footer class="GreyBg100">
 
-  <div class="blankHS"></div>
+  <!--footer-->
+  <footer class="GreyBg100">
 
-  <div class="Grid Grid--gutters Grid--1of3 wrapper">
-    <div class="Grid-cell">
+    <div class="blankHS"></div>
+    <div class="wrapper">
+      <div class="element">
 
-      <a href="/" class=""><img class="widthXXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-      <div class="blankHXS"></div>
+        <div class="Grid Grid--gutters Grid--1of3 ">
+          <div class="Grid-cell">
 
-      <div class="Grid Grid--gutters">
-        <div class="ClipboardBoxIconOnly">
-          <button class="ClipboardIconOnly">
-            <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
-              title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
-            <p class="clickIconCopy">vickyw.design@gmail.com</p>
-          </button>
-        </div>
-        <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-          <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
-        </a>
+            <a href="/" class=""><img class="widthXXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+            <div class="blankHXS"></div>
 
-        <a target="_blank" href="https://github.com/vicky-wyq">
-          <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/git.svg" alt="GitHub" title="GitHub">
-        </a>
+            <div class="Grid Grid--gutters">
+              <div class="ClipboardBoxIconOnly">
+                <button class="ClipboardIconOnly">
+                  <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
+                    title="Copy to Clipboard" src="../../icon/mail.svg" alt="LinkedIn">
+                  <p class="clickIconCopy">vickyw.design@gmail.com</p>
+                </button>
+              </div>
+              <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/in.svg" alt="LinkedIn">
+              </a>
 
-        <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-          <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
-        </a>
+              <a target="_blank" href="https://github.com/vicky-wyq">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/git.svg" alt="GitHub"
+                  title="GitHub">
+              </a>
 
-        <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-          <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/ins.svg" alt="Instagram"
-            title="Instagram">
-        </a>
-      </div>
-      <div class="blankHXS"></div>
-    </div>
-    <div class="Grid-cell">
-      <div class="Grid Grid--gutters Grid--cols-6">
-        <div class="Grid-cell">
-          <h5> <strong> Project </strong> </h5>
-          <div class="blankHXXS"></div>
-          <a href="/glorify/">
-            <h6> <strong class="Grey700">Glorify</strong> </h6>
-          </a>
+              <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/Codepen.svg" alt="CodePen">
+              </a>
 
-          <h6>Elevating Community Involvement</h6>
-          <div class="blankHXXS"></div>
-          <a href="/appointa/">
-            <h6> <strong class="Grey700">APPOINTA</strong> </h6>
-          </a>
-          <h6>Simplifying Interview Coordination</h6>
-          <div class="blankHXXS"></div>
-          <a href="/seer/">
-            <h6> <strong class="Grey700">SEER</strong> </h6>
-          </a>
-          <h6>Empowering Brand Managers with Insights</h6>
-        </div>
+              <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/ins.svg" alt="Instagram"
+                  title="Instagram">
+              </a>
+            </div>
+            <div class="blankHXS"></div>
+          </div>
+          <div class="Grid-cell">
+            <div class="Grid Grid--gutters Grid--cols-6">
+              <div class="Grid-cell">
+                <h5> <strong> Project </strong> </h5>
+                <div class="blankHXXS"></div>
+                <a href="/glorify/">
+                  <h6> <strong class="Grey700">Glorify</strong> </h6>
+                </a>
 
-        <div class="Grid-cell">
-          <h5> <strong> Service </strong> </h5>
-          <div class="blankHXXS"></div>
+                <h6>Elevating Community Involvement</h6>
+                <div class="blankHXXS"></div>
+                <a href="/appointa/">
+                  <h6> <strong class="Grey700">APPOINTA</strong> </h6>
+                </a>
+                <h6>Simplifying Interview Coordination</h6>
+                <div class="blankHXXS"></div>
+                <a href="/seer/">
+                  <h6> <strong class="Grey700">SEER</strong> </h6>
+                </a>
+                <h6>Empowering Brand Managers with Insights</h6>
+              </div>
 
-          <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
-          <h6>Creating Intuitive User Experiences</h6>
-          <div class="blankHXXS"></div>
+              <div class="Grid-cell">
+                <h5> <strong> Service </strong> </h5>
+                <div class="blankHXXS"></div>
 
-          <h6> <strong class="Grey700">Design Research </strong> </h6>
-          <h6>In-depth Analysis for Targeted Solutions</h6>
-          <div class="blankHXXS"></div>
+                <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
+                <h6>Creating Intuitive User Experiences</h6>
+                <div class="blankHXXS"></div>
 
-          <h6> <strong class="Grey700">Web Development </strong> </h6>
-          <h6>Seamless Design Implementation</h6>
-          <div class="blankHXXS"></div>
+                <h6> <strong class="Grey700">Design Research </strong> </h6>
+                <h6>In-depth Analysis for Targeted Solutions</h6>
+                <div class="blankHXXS"></div>
 
-          <h6> <strong class="Grey700">Branding </strong> </h6>
-          <h6>Crafting Memorable Brand Identities</h6>
-        </div>
+                <h6> <strong class="Grey700">Web Development </strong> </h6>
+                <h6>Seamless Design Implementation</h6>
+                <div class="blankHXXS"></div>
 
-        <div class="Grid-cell">
-          <h5> <strong> About </strong> </h5>
-          <div class="blankHXXS"></div>
+                <h6> <strong class="Grey700">Branding </strong> </h6>
+                <h6>Crafting Memorable Brand Identities</h6>
+              </div>
 
-          <a href="/about">
-            <h6>About me</h6>
-          </a>
-          <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
-        </div>
-      </div>
+              <div class="Grid-cell">
+                <h5> <strong> About </strong> </h5>
+                <div class="blankHXXS"></div>
 
-    </div>
-  </div>
-  <div class="blankHS"></div>
-  <div class="Grid Grid--full wrapper">
-    <div class="Grid-cell">
-      <div class="element footerBorder">
-        <div class="element">
-          <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
+                <a href="/about">
+                  <h6>About me</h6>
+                </a>
+                <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
-    </div>
-  </div>
 
-</footer>
-<!--footer-->
+    </div>
+
+
+    <div class="blankHS"></div>
+    <div class="Grid Grid--full wrapper">
+      <div class="Grid-cell">
+        <div class=" footerBorder">
+          <div class="element">
+            <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </footer>
+  <!--footer-->
 
 </body>
 
