--- a/architecture/thesis_studio/index.html
+++ b/architecture/thesis_studio/index.html
@@ -18,34 +18,34 @@
   <meta name="description" content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
   ">
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:locale" content="en_US">
-    <meta property="og:type" content="website">
-    <meta property='og:title' content="Vicky Wang | UX Designer | Thesis Studio" />
-    <meta property='og:description'
-      content='Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email' />
-    <meta property='og:url' content="https://vickywang.me/architecture/thesis_studio/" />
-    <meta property="og:site_name" content="Vicky's Website">
-  
-    <meta property='og:image' content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail_Glorify.jpg" />
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="627">
-    <meta property="og:image:type" content="image/jpeg">
-    <!-- linkedin -->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@vickyw_design" />
-    <meta name="twitter:title" content="Vicky's Website" />
-    <meta name="twitter:description"
-      content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio" />
-    <meta name="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail_Glorify.jpg" />
-    <meta name="twitter:url" content="//vickywang.me/">
-    <meta name="twitter:creator" content="VICKY WANG" />
-    <!-- twitter -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
-    <link rel="manifest" href="../site.webmanifest">
-    <!-- favicon -->
+  <!-- Open Graph / Facebook -->
+  <meta property="og:locale" content="en_US">
+  <meta property="og:type" content="website">
+  <meta property='og:title' content="Vicky Wang | UX Designer | Thesis Studio" />
+  <meta property='og:description'
+    content='Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email' />
+  <meta property='og:url' content="https://vickywang.me/architecture/thesis_studio/" />
+  <meta property="og:site_name" content="Vicky's Website">
+
+  <meta property='og:image' content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail_Glorify.jpg" />
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="627">
+  <meta property="og:image:type" content="image/jpeg">
+  <!-- linkedin -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@vickyw_design" />
+  <meta name="twitter:title" content="Vicky's Website" />
+  <meta name="twitter:description"
+    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio" />
+  <meta name="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail_Glorify.jpg" />
+  <meta name="twitter:url" content="//vickywang.me/">
+  <meta name="twitter:creator" content="VICKY WANG" />
+  <!-- twitter -->
+  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+  <link rel="manifest" href="../site.webmanifest">
+  <!-- favicon -->
 
 
   <link rel="stylesheet" href="../../main.css">
@@ -102,32 +102,32 @@
   </div>
   <!--progressBarScroll-->
   <!-- header -->
-  <nav class="header" id="header">
-    <div class="backgroundColorNav">
-
-      <a href="http://vickywang.me/" class="logo pointer colorBlack">VW</a>
-
-      <div class="navbar">
-        <ul class="nav-menu">
-          <li class="nav-item inactive marginZero"><a href="/" class="nav-link box font300-1080 ">PROJECT</a>
-          </li>
-          <li class="nav-item active greenNav marginZero"><a href="/architecture" class="nav-link box">ARCHITECTURE</a>
-          </li>
-          <li class="nav-item inactive marginZero"><a href="/photography"
-              class="nav-link box font300-1080 ">PHOTOGRAPHY</a>
-          </li>
-          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
-          </li>
-        </ul>
+  <header>
+    <nav class="header" id="header">
+      <div class="backgroundColorNav">
+        <a href="http://vickywang.me/"><img class="logo pointer" src="../../icon/LOGO.svg" alt="VW"
+            title="vickywang.me"></a>
+        <div class="navbar">
+          <ul class="nav-menu">
+            <li class="nav-item inactive marginZero"><a href="/" class="nav-link box">PROJECT</a>
+            </li>
+            <li class="nav-item active activeNav marginZero"><a href="/architecture"
+                class="nav-link box">ARCHITECTURE</a>
+            </li>
+            <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
+            </li>
+            <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">ABOUT</a>
+            </li>
+          </ul>
+        </div>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
       </div>
-
-      <div class="hamburger">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
-    </div>
-  </nav>
+    </nav>
+  </header>
   <!-- header -->
   <div class="blankHXL"></div>
 
@@ -217,9 +217,19 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <h4>ON ORDER: DIFFERENTIATED CONTINUITY OF OBJECTS</h4>
-          <p class="lineHorizAll"></p>
-          <h6>Thesis Studio </h6>
+          <div class="elementInner">
+            <h5>On order: Differenciated</h5>
+            <h3 class="" data-aos="fade-up"><strong>CONTINUITY OF OBJECTS</strong></h3>
+
+            <p class="lineHorizAll"></p>
+            <h6 class=""> <strong>Studio:</strong> &nbsp; THESIS STUDIO, ARCH 204 A & B
+            </h6>
+            <h6><strong>Duration: </strong> <span class="textItalic">&nbsp;2018 - 2019 Two
+                Semesters</span> </h6>
+            <h6> <strong>Project:</strong> &nbsp; M. Arch, CED, UC Berkeley</h6>
+            <h6> <strong>Site:</strong> &nbsp; No site</h6>
+            <h6> <strong>Instructor:</strong> &nbsp; Rudabeh Pakravan, Kyle Steinfeld</h6>
+          </div>
         </div>
       </div>
 
@@ -229,16 +239,17 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
+  <!-- Arrow -->
+  <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> ABSTRACT </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <div class="element">
+        <h2 class="tArrow"> ABSTRACT<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+        </h2>
       </div>
     </div>
   </div>
-  <!--Arrow-->
+  <!-- Arrow -->
+
   <div class="blankHM"></div>
 
   <!--Abstract-->
@@ -281,17 +292,18 @@
   <!--Abstract-->
   <div class="blankHM"></div>
   <hr>
+
   <div class="blankHM"></div>
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
+  <!-- Arrow -->
+  <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Operation Method </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <div class="element">
+        <h2 class="tArrow"> Operation Method<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+        </h2>
       </div>
     </div>
   </div>
-  <!--Arrow-->
+  <!-- Arrow -->
   <!--Operation Method -->
   <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
@@ -324,16 +336,17 @@
   <hr>
   <div class="blankHM"></div>
 
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full wrapper">
+
+  <!-- Arrow -->
+  <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Case Study</p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <div class="element">
+        <h2 class="tArrow"> Case Study<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+        </h2>
       </div>
     </div>
   </div>
-  <!--Arrow-->
+  <!-- Arrow -->
   <div class="blankHM"></div>
   <!--CaseStudy1 -->
   <div class="Grid Grid--full wrapper">
@@ -415,16 +428,17 @@
   <hr>
   <div class="blankHM"></div>
 
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full wrapper">
+
+  <!-- Arrow -->
+  <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow">Results of Manipulations</p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <div class="element">
+        <h2 class="tArrow"> Results of Manipulations<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+        </h2>
       </div>
     </div>
   </div>
-  <!--Arrow-->
+  <!-- Arrow -->
   <div class="blankHM"></div>
 
   <!--manipulation -->
@@ -439,19 +453,21 @@
     </div>
   </div>
   <!--manipulation -->
-  <div class="blankHXS"></div>
+  <div class="blankHM"></div>
   <hr>
-  <div class="blankHXS"></div>
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full wrapper">
+  <div class="blankHM"></div>
+
+  
+  <!-- Arrow -->
+  <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow">Architecture Projects</p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <div class="element">
+        <h2 class="tArrow"> Architecture Projects<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+        </h2>
       </div>
     </div>
   </div>
-  <!--Arrow-->
+  <!-- Arrow -->
   <div class="blankHM"></div>
   <!--project -->
   <div class="Grid Grid--full wrapper">
@@ -517,16 +533,17 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full wrapper">
-    <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow">Drawings of multiple scales</p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+
+    <!-- Arrow -->
+    <div class="Grid Grid--full wrapper">
+      <div class="Grid-cell">
+        <div class="element">
+          <h2 class="tArrow"> Drawings of multiple scales<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+          </h2>
+        </div>
       </div>
     </div>
-  </div>
-  <!--Arrow-->
+    <!-- Arrow -->
   <div class="blankHM"></div>
 
   <!--drawing -->
@@ -610,18 +627,17 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-
-
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full wrapper">
-    <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow">Photo Documentation</p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+    <!-- Arrow -->
+    <div class="Grid Grid--full wrapper">
+      <div class="Grid-cell">
+        <div class="element">
+          <h2 class="tArrow"> Photo Documentation<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+          </h2>
+        </div>
       </div>
     </div>
-  </div>
-  <!--Arrow-->
+    <!-- Arrow -->
+
   <div class="blankHM"></div>
 
   <!--photos -->
@@ -678,20 +694,21 @@
 
 
 
-  <div class="blankHXL"></div>
+  <!-- message -->
+  <div class="blankHM"></div>
+  <div class="Grid Grid--full u-textCenter">
+    <div class="Grid-cell">
+      <div data-aos="fade-up">
+        <h4 class="element">
+          Thank You for Visiting &#33; Check back soon for more updates and stay tuned &#33;
+        </h4>
+      </div>
+      <a href="/" class=""><img class="widthXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+    </div>
+  </div>
+  <div class="blankHM"></div>
 
-
-  <p class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
-  <p class="textM centerHorz" data-aos="fade-up">please email me for professional projects</p>
-  <div class="blank-lineheight-s"></div>
-
-
-
-  <div class="blankHXL"></div>
-
-
-
-
+  <!-- message -->
   <!--back to top-->
   <button id="myBtn" title="Back to top">
     <div id="dad">
@@ -706,26 +723,119 @@
   <!--back to top-->
   <!--footer-->
   <footer class="GreyBg100">
-    <div class="">
-      <div class="footer">
-        <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
-        <div class="footer-right">
-          <a href="mailto:vickyw.design@gmail.com">
-            <img class="footer-logo" src="../../icon/mail.svg" alt="email">
-          </a>
-          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
-            <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
-          </a>
-          <a target="_blank" href="https://github.com/vicky-wyq">
-            <img class="footer-logo" src="../../icon/git.svg" alt="github">
-          </a>
-          <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-            <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
-          </a>
+
+    <div class="blankHS"></div>
+    <div class="wrapper">
+      <div class="element">
+
+        <div class="Grid Grid--gutters Grid--1of3 ">
+          <div class="Grid-cell">
+
+            <a href="/" class=""><img class="widthXXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+            <div class="blankHXS"></div>
+
+            <div class="Grid Grid--gutters">
+              <div class="ClipboardBoxIconOnly">
+                <button class="ClipboardIconOnly">
+                  <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
+                    title="Copy to Clipboard" src="../../icon/mail.svg" alt="LinkedIn">
+                  <p class="clickIconCopy">vickyw.design@gmail.com</p>
+                </button>
+              </div>
+              <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/in.svg" alt="LinkedIn">
+              </a>
+
+              <a target="_blank" href="https://github.com/vicky-wyq">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/git.svg" alt="GitHub"
+                  title="GitHub">
+              </a>
+
+              <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/Codepen.svg" alt="CodePen">
+              </a>
+
+              <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/ins.svg" alt="Instagram"
+                  title="Instagram">
+              </a>
+            </div>
+            <div class="blankHXS"></div>
+          </div>
+          <div class="Grid-cell">
+            <div class="Grid Grid--gutters Grid--cols-6">
+              <div class="Grid-cell">
+                <h5> <strong> Project </strong> </h5>
+                <div class="blankHXXS"></div>
+                <a href="/glorify/">
+                  <h6> <strong class="Grey700">Glorify</strong> </h6>
+                </a>
+
+                <h6>Elevating Community Involvement</h6>
+                <div class="blankHXXS"></div>
+                <a href="/appointa/">
+                  <h6> <strong class="Grey700">APPOINTA</strong> </h6>
+                </a>
+                <h6>Simplifying Interview Coordination</h6>
+                <div class="blankHXXS"></div>
+                <a href="/seer/">
+                  <h6> <strong class="Grey700">SEER</strong> </h6>
+                </a>
+                <h6>Empowering Brand Managers with Insights</h6>
+              </div>
+
+              <div class="Grid-cell">
+                <h5> <strong> Service </strong> </h5>
+                <div class="blankHXXS"></div>
+
+                <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
+                <h6>Creating Intuitive User Experiences</h6>
+                <div class="blankHXXS"></div>
+
+                <h6> <strong class="Grey700">Design Research </strong> </h6>
+                <h6>In-depth Analysis for Targeted Solutions</h6>
+                <div class="blankHXXS"></div>
+
+                <h6> <strong class="Grey700">Web Development </strong> </h6>
+                <h6>Seamless Design Implementation</h6>
+                <div class="blankHXXS"></div>
+
+                <h6> <strong class="Grey700">Branding </strong> </h6>
+                <h6>Crafting Memorable Brand Identities</h6>
+              </div>
+
+              <div class="Grid-cell">
+                <h5> <strong> About </strong> </h5>
+                <div class="blankHXXS"></div>
+
+                <a href="/about">
+                  <h6>About me</h6>
+                </a>
+                <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
+
+    <div class="blankHS"></div>
+    <div class="Grid Grid--full wrapper">
+      <div class="Grid-cell">
+        <div class=" footerBorder">
+          <div class="element">
+            <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
+          </div>
         </div>
       </div>
     </div>
+
   </footer>
+  <!--footer-->
+
 </body>
 
 </html>
