--- a/navigation/index.html
+++ b/navigation/index.html
@@ -11,12 +11,11 @@
   <link rel="canonical" href="https://vickywang.me/navigation/">
   <meta name="author" content="Vicky W.">
 
-    <!-- Basic Metadata -->
+  <!-- Basic Metadata -->
 
   <meta name="keywords"
     content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
-  <meta name="description"
-    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
+  <meta name="description" content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
 ">
 
   <!-- Open Graph / Facebook -->
@@ -148,16 +147,15 @@
     </div>
   </div>
   <!--progressBarScroll-->
+
   <!-- header -->
-  <nav class="header navbarN" id="header">
-
-
-    <div class="backgroundColorNav ">
+  <nav class="header" id="header">
+    <div class="backgroundColorNav">
       <a href="http://vickywang.me/"><img class="logo pointer" src="../icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
-
+      </a>
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="dropdown nav-item active marginZero"><a href="/" class="nav-link box">PROJECT</a>
+          <li class="dropdown nav-item active activeNav marginZero"><a href="/" class="nav-link box">PROJECT</a>
             <div class="dropdown-content">
               <a href="/glorify/">
 
@@ -184,11 +182,11 @@
                   </div>
                 </div>
               </a>
-              <a href="/design_system/">
+              <a href="/navigation/">
                 <div>
-                  <img src="../image/Cover_portfolioWeb.png" alt="Design System">
+                  <img src="../image/Cover_portfolioWeb.svg" alt="Design System">
                   <div class="element">
-                    <h5 class="colorBlack">Design System | Efficiently Bulid &#38; Maintain Components</h5>
+                    <h5 class="colorBlack">Navigation Design | Secondary Menu Options for vickywang.me</h5>
                   </div>
                 </div>
               </a>
@@ -196,21 +194,18 @@
             </div>
           </li>
 
-          <li class="nav-item inactive marginZero"><a href="/architecture"
-              class="nav-link box font300-1080 ">ARCHITECTURE</a>
+          <li class="nav-item inactive marginZero"><a href="/architecture" class="nav-link box ">ARCHITECTURE</a>
           </li>
-          <li class="nav-item inactive marginZero"><a href="/photography"
-              class="nav-link box font300-1080">PHOTOGRAPHY</a>
+          <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box ">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
+          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">ABOUT</a>
           </li>
         </ul>
-
       </div>
       <div class="hamburger">
-        <span class="bar APPOINTA"></span>
-        <span class="bar APPOINTA"></span>
-        <span class="bar APPOINTA"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
       </div>
     </div>
   </nav>
@@ -400,112 +395,120 @@
 
 
 
-<!--footer-->
-<footer class="GreyBg100">
+  <!--footer-->
+  <footer class="GreyBg100">
 
-  <div class="blankHS"></div>
+    <div class="blankHS"></div>
+    <div class="wrapper">
+      <div class="element">
 
-  <div class="Grid Grid--gutters Grid--1of3 wrapper">
-    <div class="Grid-cell">
+        <div class="Grid Grid--gutters Grid--1of3 ">
+          <div class="Grid-cell">
 
-      <a href="/" class=""><img class="widthXXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-      <div class="blankHXS"></div>
+            <a href="/" class=""><img class="widthXXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+            <div class="blankHXS"></div>
 
-      <div class="Grid Grid--gutters">
-        <div class="ClipboardBoxIconOnly">
-          <button class="ClipboardIconOnly">
-            <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
-              title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
-            <p class="clickIconCopy">vickyw.design@gmail.com</p>
-          </button>
-        </div>
-        <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-          <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
-        </a>
+            <div class="Grid Grid--gutters">
+              <div class="ClipboardBoxIconOnly">
+                <button class="ClipboardIconOnly">
+                  <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
+                    title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
+                  <p class="clickIconCopy">vickyw.design@gmail.com</p>
+                </button>
+              </div>
+              <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
+              </a>
 
-        <a target="_blank" href="https://github.com/vicky-wyq">
-          <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/git.svg" alt="GitHub" title="GitHub">
-        </a>
+              <a target="_blank" href="https://github.com/vicky-wyq">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/git.svg" alt="GitHub"
+                  title="GitHub">
+              </a>
 
-        <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-          <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
-        </a>
+              <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
+              </a>
 
-        <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-          <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/ins.svg" alt="Instagram"
-            title="Instagram">
-        </a>
-      </div>
-      <div class="blankHXS"></div>
-    </div>
-    <div class="Grid-cell">
-      <div class="Grid Grid--gutters Grid--cols-6">
-        <div class="Grid-cell">
-          <h5> <strong> Project </strong> </h5>
-          <div class="blankHXXS"></div>
-          <a href="/glorify/">
-            <h6> <strong class="Grey700">Glorify</strong> </h6>
-          </a>
+              <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/ins.svg" alt="Instagram"
+                  title="Instagram">
+              </a>
+            </div>
+            <div class="blankHXS"></div>
+          </div>
+          <div class="Grid-cell">
+            <div class="Grid Grid--gutters Grid--cols-6">
+              <div class="Grid-cell">
+                <h5> <strong> Project </strong> </h5>
+                <div class="blankHXXS"></div>
+                <a href="/glorify/">
+                  <h6> <strong class="Grey700">Glorify</strong> </h6>
+                </a>
 
-          <h6>Elevating Community Involvement</h6>
-          <div class="blankHXXS"></div>
-          <a href="/appointa/">
-            <h6> <strong class="Grey700">APPOINTA</strong> </h6>
-          </a>
-          <h6>Simplifying Interview Coordination</h6>
-          <div class="blankHXXS"></div>
-          <a href="/seer/">
-            <h6> <strong class="Grey700">SEER</strong> </h6>
-          </a>
-          <h6>Empowering Brand Managers with Insights</h6>
-        </div>
+                <h6>Elevating Community Involvement</h6>
+                <div class="blankHXXS"></div>
+                <a href="/appointa/">
+                  <h6> <strong class="Grey700">APPOINTA</strong> </h6>
+                </a>
+                <h6>Simplifying Interview Coordination</h6>
+                <div class="blankHXXS"></div>
+                <a href="/seer/">
+                  <h6> <strong class="Grey700">SEER</strong> </h6>
+                </a>
+                <h6>Empowering Brand Managers with Insights</h6>
+              </div>
 
-        <div class="Grid-cell">
-          <h5> <strong> Service </strong> </h5>
-          <div class="blankHXXS"></div>
+              <div class="Grid-cell">
+                <h5> <strong> Service </strong> </h5>
+                <div class="blankHXXS"></div>
 
-          <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
-          <h6>Creating Intuitive User Experiences</h6>
-          <div class="blankHXXS"></div>
+                <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
+                <h6>Creating Intuitive User Experiences</h6>
+                <div class="blankHXXS"></div>
 
-          <h6> <strong class="Grey700">Design Research </strong> </h6>
-          <h6>In-depth Analysis for Targeted Solutions</h6>
-          <div class="blankHXXS"></div>
+                <h6> <strong class="Grey700">Design Research </strong> </h6>
+                <h6>In-depth Analysis for Targeted Solutions</h6>
+                <div class="blankHXXS"></div>
 
-          <h6> <strong class="Grey700">Web Development </strong> </h6>
-          <h6>Seamless Design Implementation</h6>
-          <div class="blankHXXS"></div>
+                <h6> <strong class="Grey700">Web Development </strong> </h6>
+                <h6>Seamless Design Implementation</h6>
+                <div class="blankHXXS"></div>
 
-          <h6> <strong class="Grey700">Branding </strong> </h6>
-          <h6>Crafting Memorable Brand Identities</h6>
-        </div>
+                <h6> <strong class="Grey700">Branding </strong> </h6>
+                <h6>Crafting Memorable Brand Identities</h6>
+              </div>
 
-        <div class="Grid-cell">
-          <h5> <strong> About </strong> </h5>
-          <div class="blankHXXS"></div>
+              <div class="Grid-cell">
+                <h5> <strong> About </strong> </h5>
+                <div class="blankHXXS"></div>
 
-          <a href="/about">
-            <h6>About me</h6>
-          </a>
-          <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
-        </div>
-      </div>
+                <a href="/about">
+                  <h6>About me</h6>
+                </a>
+                <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
+              </div>
+            </div>
+          </div>
 
-    </div>
-  </div>
-  <div class="blankHS"></div>
-  <div class="Grid Grid--full wrapper">
-    <div class="Grid-cell">
-      <div class="element footerBorder">
-        <div class="element">
-          <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
         </div>
       </div>
-    </div>
-  </div>
 
-</footer>
-<!--footer-->
+    </div>
+
+
+    <div class="blankHS"></div>
+    <div class="Grid Grid--full wrapper">
+      <div class="Grid-cell">
+        <div class=" footerBorder">
+          <div class="element">
+            <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </footer>
+  <!--footer-->
 
 
 
