--- a/seer/index.html
+++ b/seer/index.html
@@ -174,12 +174,12 @@
           </li>
 
           <li class="nav-item inactive marginZero"><a href="/architecture"
-              class="nav-link box font300-1080 ">ARCHITECTURE</a>
+              class="nav-link box ">ARCHITECTURE</a>
           </li>
           <li class="nav-item inactive marginZero"><a href="/photography"
-              class="nav-link box font300-1080">PHOTOGRAPHY</a>
+              class="nav-link box ">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
+          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">ABOUT</a>
           </li>
         </ul>
       </div>
@@ -1821,41 +1821,42 @@
     </div>
   </button>
   <!--back to top-->
-  <!--footer-->
-  <footer class="GreyBg100">
+<!--footer-->
+<footer class="GreyBg100">
 
-    <div class="blankHS"></div>
-    <div class="wrapper">
+  <div class="blankHS"></div>
+  <div class="wrapper">
+    <div class="element">
 
       <div class="Grid Grid--gutters Grid--1of3 ">
         <div class="Grid-cell">
 
-          <a href="/" class=""><img class="widthXXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+          <a href="/" class=""><img class="widthXXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
           <div class="blankHXS"></div>
 
           <div class="Grid Grid--gutters">
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly">
                 <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
-                  title="Copy to Clipboard" src="../../icon/mail.svg" alt="LinkedIn">
+                  title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
                 <p class="clickIconCopy">vickyw.design@gmail.com</p>
               </button>
             </div>
             <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/in.svg" alt="LinkedIn">
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
             </a>
 
             <a target="_blank" href="https://github.com/vicky-wyq">
-              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/git.svg" alt="GitHub"
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/git.svg" alt="GitHub"
                 title="GitHub">
             </a>
 
             <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/Codepen.svg" alt="CodePen">
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
             </a>
 
             <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/ins.svg" alt="Instagram"
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/ins.svg" alt="Instagram"
                 title="Instagram">
             </a>
           </div>
@@ -1913,26 +1914,27 @@
               <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
             </div>
           </div>
-
         </div>
-      </div>
 
-    </div>
-
-    <div class="blankHS"></div>
-    <div class="Grid Grid--full wrapper">
-      <div class="Grid-cell">
-        <div class="element footerBorder">
-          <div class="element">
-            <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
-          </div>
-        </div>
       </div>
     </div>
 
-  </footer>
-  <!--footer-->
+  </div>
 
+
+  <div class="blankHS"></div>
+  <div class="Grid Grid--full wrapper">
+    <div class="Grid-cell">
+      <div class=" footerBorder">
+        <div class="element">
+          <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</footer>
+<!--footer-->
 
 
 </body>
