--- a/about/index.html
+++ b/about/index.html
@@ -10,20 +10,13 @@
   <link rel="canonical" href="https://vickywang.me/about">
   <meta name="author" content="Vicky W.">
 
-
-  <meta name="keywords"
-    content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
-  <meta name="description"
-    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.">
-
   <!-- Open Graph / Facebook -->
-
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
   <meta property='og:title' content="Vicky W. | UX Designer" />
   <meta property='og:description'
     content='Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio' />
-  <meta property='og:url' content="https://vickywang.me/" />
+  <meta property='og:url' content="https://vickywang.me/about" />
   <meta property="og:site_name" content="Vicky's Website">
 
 
@@ -535,7 +528,7 @@
         <div class="element">
           <h4 data-aos="fade-up"> <strong>Design Skills</strong> </h4>
           <h5>User-Centered Design (UCD)</h5>
-          <h5>Wireframing and Prototyping</h5>
+          <h5>Wireframing &#38; Prototyping</h5>
           <h5>User Research</h5>
           <h5>Information Architecture</h5>
           <h5>Usability Testing</h5>
@@ -548,9 +541,9 @@
 
         </div>
         <div class="element">
-          <h4 data-aos="fade-up"> <strong>Design Research </strong> </h4>
+          <h4 data-aos="fade-up"> <strong> Design Research </strong> </h4>
           <h5>User Interviews </h5>
-          <h5>Surveys and Questionnaires</h5>
+          <h5>Surveys &#38; Questionnaires</h5>
 
           <h5>Usability Testing</h5>
           <h5>User Personas</h5>
@@ -559,7 +552,7 @@
           <h5>Data Analysis</h5>
         </div>
         <div class="element">
-          <h4 data-aos="fade-up"> <strong>Technical Skills</strong> </h4>
+          <h4 data-aos="fade-up"> <strong> Technical Skills</strong> </h4>
           <h5> HTML, CSS, JavaScript, jQuery </h5>
         </div>
 
