--- a/index.html
+++ b/index.html
@@ -177,11 +177,9 @@
           <ul class="nav-menu">
             <li class="nav-item active activeNav marginZero"><a href="/" class="nav-link box">PROJECT</a>
             </li>
-            <li class="nav-item inactive marginZero"><a href="/architecture"
-                class="nav-link box ">ARCHITECTURE</a>
+            <li class="nav-item inactive marginZero"><a href="/architecture" class="nav-link box ">ARCHITECTURE</a>
             </li>
-            <li class="nav-item inactive marginZero"><a href="/photography"
-                class="nav-link box ">PHOTOGRAPHY</a>
+            <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box ">PHOTOGRAPHY</a>
             </li>
             <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">ABOUT</a>
             </li>
@@ -473,45 +471,38 @@
 
       <ul class="tags">
 
+        <li class="tag"><span class="box"> User-centered Design</span></li>
+
         <li class="tag"><span class="box"> Experience Design</span></li>
         <li class="tag"><span class="box"> User Experience Design </span></li>
         <li class="tag"><span class="box"> User Interface Design</span></li>
+        <li class="tag"><span class="box"> Interaction Design</span></li>
+
         <li class="tag"><span class="box"> Product Design</span></li>
         <li class="tag"><span class="box"> Design Thinking</span></li>
-        <li class="tag"><span class="box"> User-centered Design</span></li>
+        <li class="tag"><span class="box"> Surveys &#38; Questionnaires</span></li>
+        <li class="tag"><span class="box"> Journey Mapping </span></li>
+        <li class="tag"><span class="box"> Data Analysis </span></li>
 
 
 
-        <li class="tag"><span class="box"> Responsive Web Design</span></li>
+        <li class="tag"><span class="box"> Responsive &#38; Adaptive Design</span></li>
         <li class="tag"><span class="box"> Web Application Design</span></li>
         <li class="tag"><span class="box"> Design System</span></li>
         <li class="tag"><span class="box"> Graphic Design</span></li>
 
         <li class="tag"><span class="box"> UX Research</span></li>
-        <li class="tag"><span class="box">Design Research</span></li>
+        <li class="tag"><span class="box"> Design Research</span></li>
+
+        <li class="tag"><span class="box"> Design Research</span></li>
         <li class="tag"><span class="box"> Collaborative Problem Solving</span></li>
-
-
-        <li class="tag"><span class="box"> User Interface Prototyping</span></li>
-        <li class="tag"><span class="box"> Wireframing</span></li>
-        <li class="tag"><span class="box"> Prototyping</span></li>
-
-
+        <li class="tag"><span class="box"> Concept Testing</span></li>
+        <li class="tag"><span class="box"> Usability Testing</span></li>
+        <li class="tag"><span class="box"> Wireframing &#38; Prototyping</span></li>
 
         <li class="tag"><span class="box"> Figma</span></li>
-
-        <li class="tag"><span class="box"> Adobe Photoshop</span></li>
-        <li class="tag"><span class="box"> Adobe Illustrator</span></li>
-
-
-        <li class="tag"><span class="box">Concept Testing</span></li>
-        <li class="tag"><span class="box">Usability Testing</span></li>
-
-
+        <li class="tag"><span class="box"> Adobe CS </span></li>
         <li class="tag"><span class="box"> 3D Modeling</span></li>
-
-
-
 
         <li class="tag"><span class="box">HTML</span></li>
         <li class="tag"><span class="box">CSS</span></li>
@@ -558,94 +549,94 @@
     <div class="wrapper">
       <div class="element">
 
-          <div class="Grid Grid--gutters Grid--1of3">
-            <div class="Grid-cell">
+        <div class="Grid Grid--gutters Grid--1of3">
+          <div class="Grid-cell">
 
-              <a href="/" class=""><img class="widthXXS" src="./icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-              <div class="blankHXS"></div>
+            <a href="/" class=""><img class="widthXXS" src="./icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+            <div class="blankHXS"></div>
 
-              <div class="Grid Grid--gutters">
-                <div class="ClipboardBoxIconOnly">
-                  <button class="ClipboardIconOnly">
-                    <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
-                      title="Copy to Clipboard" src="./icon/mail.svg" alt="LinkedIn">
-                    <p class="clickIconCopy">vickyw.design@gmail.com</p>
-                  </button>
-                </div>
-                <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-                  <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="./icon/in.svg" alt="LinkedIn">
-                </a>
-
-                <a target="_blank" href="https://github.com/vicky-wyq">
-                  <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="./icon/git.svg" alt="GitHub"
-                    title="GitHub">
-                </a>
-
-                <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-                  <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
-                </a>
-
-                <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-                  <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="./icon/ins.svg" alt="Instagram"
-                    title="Instagram">
-                </a>
+            <div class="Grid Grid--gutters">
+              <div class="ClipboardBoxIconOnly">
+                <button class="ClipboardIconOnly">
+                  <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
+                    title="Copy to Clipboard" src="./icon/mail.svg" alt="LinkedIn">
+                  <p class="clickIconCopy">vickyw.design@gmail.com</p>
+                </button>
               </div>
-              <div class="blankHXS"></div>
+              <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="./icon/in.svg" alt="LinkedIn">
+              </a>
+
+              <a target="_blank" href="https://github.com/vicky-wyq">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="./icon/git.svg" alt="GitHub"
+                  title="GitHub">
+              </a>
+
+              <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
+              </a>
+
+              <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="./icon/ins.svg" alt="Instagram"
+                  title="Instagram">
+              </a>
             </div>
-            <div class="Grid-cell">
-              <div class="Grid Grid--gutters Grid--cols-6">
-                <div class="Grid-cell">
-                  <h5> <strong> Project </strong> </h5>
-                  <div class="blankHXXS"></div>
-                  <a href="/glorify/">
-                    <h6> <strong class="Grey700">Glorify</strong> </h6>
-                  </a>
+            <div class="blankHXS"></div>
+          </div>
+          <div class="Grid-cell">
+            <div class="Grid Grid--gutters Grid--cols-6">
+              <div class="Grid-cell">
+                <h5> <strong> Project </strong> </h5>
+                <div class="blankHXXS"></div>
+                <a href="/glorify/">
+                  <h6> <strong class="Grey700">Glorify</strong> </h6>
+                </a>
 
-                  <h6>Elevating Community Involvement</h6>
-                  <div class="blankHXXS"></div>
-                  <a href="/appointa/">
-                    <h6> <strong class="Grey700">APPOINTA</strong> </h6>
-                  </a>
-                  <h6>Simplifying Interview Coordination</h6>
-                  <div class="blankHXXS"></div>
-                  <a href="/seer/">
-                    <h6> <strong class="Grey700">SEER</strong> </h6>
-                  </a>
-                  <h6>Empowering Brand Managers with Insights</h6>
-                </div>
-
-                <div class="Grid-cell">
-                  <h5> <strong> Service </strong> </h5>
-                  <div class="blankHXXS"></div>
-
-                  <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
-                  <h6>Creating Intuitive User Experiences</h6>
-                  <div class="blankHXXS"></div>
-
-                  <h6> <strong class="Grey700">Design Research </strong> </h6>
-                  <h6>In-depth Analysis for Targeted Solutions</h6>
-                  <div class="blankHXXS"></div>
-
-                  <h6> <strong class="Grey700">Web Development </strong> </h6>
-                  <h6>Seamless Design Implementation</h6>
-                  <div class="blankHXXS"></div>
-
-                  <h6> <strong class="Grey700">Branding </strong> </h6>
-                  <h6>Crafting Memorable Brand Identities</h6>
-                </div>
-
-                <div class="Grid-cell">
-                  <h5> <strong> About </strong> </h5>
-                  <div class="blankHXXS"></div>
-
-                  <a href="/about">
-                    <h6>About me</h6>
-                  </a>
-                  <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
-                </div>
+                <h6>Elevating Community Involvement</h6>
+                <div class="blankHXXS"></div>
+                <a href="/appointa/">
+                  <h6> <strong class="Grey700">APPOINTA</strong> </h6>
+                </a>
+                <h6>Simplifying Interview Coordination</h6>
+                <div class="blankHXXS"></div>
+                <a href="/seer/">
+                  <h6> <strong class="Grey700">SEER</strong> </h6>
+                </a>
+                <h6>Empowering Brand Managers with Insights</h6>
               </div>
 
+              <div class="Grid-cell">
+                <h5> <strong> Service </strong> </h5>
+                <div class="blankHXXS"></div>
+
+                <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
+                <h6>Creating Intuitive User Experiences</h6>
+                <div class="blankHXXS"></div>
+
+                <h6> <strong class="Grey700">Design Research </strong> </h6>
+                <h6>In-depth Analysis for Targeted Solutions</h6>
+                <div class="blankHXXS"></div>
+
+                <h6> <strong class="Grey700">Web Development </strong> </h6>
+                <h6>Seamless Design Implementation</h6>
+                <div class="blankHXXS"></div>
+
+                <h6> <strong class="Grey700">Branding </strong> </h6>
+                <h6>Crafting Memorable Brand Identities</h6>
+              </div>
+
+              <div class="Grid-cell">
+                <h5> <strong> About </strong> </h5>
+                <div class="blankHXXS"></div>
+
+                <a href="/about">
+                  <h6>About me</h6>
+                </a>
+                <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
+              </div>
             </div>
+
+          </div>
         </div>
       </div>
       <div class="blankHS"></div>
