--- a/about/index.html
+++ b/about/index.html
@@ -135,11 +135,9 @@
         <ul class="nav-menu">
           <li class="nav-item inactive marginZero"><a href="/" class=" nav-link box ">PROJECT</a>
           </li>
-          <li class="nav-item inactive marginZero"><a href="/architecture"
-              class="nav-link box ">ARCHITECTURE</a>
+          <li class="nav-item inactive marginZero"><a href="/architecture" class="nav-link box ">ARCHITECTURE</a>
           </li>
-          <li class="nav-item inactive marginZero"><a href="/photography"
-              class="nav-link box ">PHOTOGRAPHY</a>
+          <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box ">PHOTOGRAPHY</a>
           </li>
           <li class="nav-item active activeNav marginZero"><a href="/about" class="nav-link box">ABOUT</a></li>
         </ul>
@@ -225,7 +223,8 @@
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
             <img class="iconS" src="IconSearch.svg" alt="se-arrow">
-            <h4 data-aos="fade-up"> <strong> Prioritize Aligning User Needs with Business Goals</strong> </h4>
+            <h4 data-aos="fade-up"> <strong> Prioritize Aligning User Needs with Business Goals</strong>
+            </h4>
             <ul>
               <li class="listCircle"> Conduct thorough user research to uncover what users truly need and value.</li>
               <li class="listCircle"> Develop personas and user journeys that reflect the real users and their
@@ -338,61 +337,44 @@
             <ul class="progressX">
               <li class="progress__item" data-aos="fade-up">
                 <h3> <strong class="Grey700">Art </strong> </h3>
+                <p>Art is the process of channeling emotions and ideas into creative expression. It allows us to
+                  visually represent complex concepts and emotions that are hard to articulate. Engaging with art
+                  enhances our understanding of the design process and opens up new perspectives. It lays the
+                  groundwork for creating distinctive designs through the use of color, composition, and other
+                  elements.
+                </p>
 
-                <ul>
-                  <li> developed the nature of artistic experience, allows me to express our emotions
-                    and feelings in a creative way.</li>
-                  <li>It also inspired me to communicate messages or ideas, and to create a visual
-                    representation of something that we find difficult to put into words.</li>
-                  <li>
-                    It helps me to develop a better understanding of the design process and to see
-                    things from a different perspective.</li>
-                  <li>It provides me with a foundation form to create beautiful and unique designs by
-                    using color, composition, etc.</li>
-                </ul>
               </li>
               <div class="blankHXS"></div>
 
               <li class="progress__item" data-aos="fade-up">
                 <h3> <strong class="Grey700">Design </strong> </h3>
+                <p>In design, the core is a powerful creative vision that incorporates creativity, innovation,
+                  meticulousness, and the capacity to think innovatively.
+                </p>
 
-                <ul>
-                  <li>having a strong creative vision</li>
-                  <li>creativity, innovation, attention to detail, and the ability to think outside
-                    the box.</li>
-                </ul>
               </li>
               <div class="blankHXS"></div>
 
               <li class="progress__item" data-aos="fade-up">
                 <h3> <strong class="Grey700">Architecture </strong> </h3>
+                <p>Architecture involves crafting buildings that are functional and visually appealing, considering the
+                  users' needs, the interplay of various components, and the overall aesthetic. Success in architecture
+                  also means communicating effectively with clients and colleagues, and being organized and efficient.
 
-                <ul>
-
-                  <li>design buildings that are both functional and aesthetically pleasing</li>
-                  <li>take into account the needs of the people who will be using the building </li>
-                  <li> the specific components and how they interact, and the overall aesthetic. </li>
-                  <li>being able to effectively communicate with clients and team members</li>
-                  <li>being organized and efficient </li>
-                </ul>
+                </p>
               </li>
               <div class="blankHXS"></div>
 
               <li class="progress__item progress__item--active" data-aos="fade-up">
-                <strong>
-                  <h3> <strong>User experience design </strong> </h3>
+                <h3> <strong>User experience design </strong> </h3>
+                <p>User experience design is about comprehending the user's desires and behaviors to create products that are intuitive and fulfilling. It combines an attractive design with a user-friendly interface, grounded in an understanding of human psychology and current technology trends.
 
-                  <ul>
-                    <li>understanding the user, understand what they want and how they want to use the
-                      product</li>
-                    <li>design a product that is easy to use and meets their needs </li>
-                    <li>user-friendly and aesthetically pleasing</li>
-                    <li>understanding of human psychology and how people interact with technology</li>
 
-                    <li>having a good understanding of the latest trends and technologies </li>
-                  </ul>
-                </strong>
-              </li>
+
+
+
+                </p>
             </ul>
           </div>
         </div>
@@ -457,7 +439,7 @@
 
           <h5> UX Design &#47; Research</h5>
 
-<br>
+          <br>
           <h5>Learn JavaScript</h5>
           <h5> Technical Skills </h5>
 
