header and a link update

--- a/index.html
+++ b/index.html
@@ -177,9 +177,11 @@
           <ul class="nav-menu">
             <li class="nav-item active activeNav marginZero"><a href="/" class="nav-link box">PROJECT</a>
             </li>
-            <li class="nav-item inactive marginZero"><a href="/architecture" class="nav-link box ">ARCHITECTURE</a>
+            <li class="nav-item inactive marginZero"><a href="/architecture" class="nav-link box">ARCHITECTURE</a>
             </li>
             <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box ">PHOTOGRAPHY</a>
+            </li>
+            <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">BLOG</a>
             </li>
             <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">ABOUT</a>
             </li>
@@ -589,18 +591,21 @@
                 <h5> <strong> Project </strong> </h5>
                 <div class="blankHXXS"></div>
                 <a href="/glorify/">
-                  <h6> <strong class="Grey700">Glorify</strong> </h6>
+                  <h6 class="fontWeight400"> Glorify</h6>
                 </a>
+
 
                 <h6>Elevating Community Involvement</h6>
                 <div class="blankHXXS"></div>
                 <a href="/appointa/">
-                  <h6> <strong class="Grey700">APPOINTA</strong> </h6>
+                  <h6 class="fontWeight400"> APPOINTA</h6>
+
                 </a>
                 <h6>Simplifying Interview Coordination</h6>
                 <div class="blankHXXS"></div>
                 <a href="/seer/">
-                  <h6> <strong class="Grey700">SEER</strong> </h6>
+                  <h6 class="fontWeight400">SEER</h6>
+
                 </a>
                 <h6>Empowering Brand Managers with Insights</h6>
               </div>
@@ -609,19 +614,25 @@
                 <h5> <strong> Service </strong> </h5>
                 <div class="blankHXXS"></div>
 
-                <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
+                <a href="/">
+                  <h6 class="fontWeight400">UX/UI Design</h6>
+                </a>
                 <h6>Creating Intuitive User Experiences</h6>
                 <div class="blankHXXS"></div>
 
-                <h6> <strong class="Grey700">Design Research </strong> </h6>
+                <a href="/">
+                  <h6 class="fontWeight400">Design Research</h6>
+                </a>
                 <h6>In-depth Analysis for Targeted Solutions</h6>
                 <div class="blankHXXS"></div>
-
-                <h6> <strong class="Grey700">Web Development </strong> </h6>
+                <a href="/">
+                  <h6 class="fontWeight400">Web Development</h6>
+                </a>
                 <h6>Seamless Design Implementation</h6>
                 <div class="blankHXXS"></div>
-
-                <h6> <strong class="Grey700">Branding </strong> </h6>
+                <a href="/">
+                  <h6 class="fontWeight400">Branding</h6>
+                </a>
                 <h6>Crafting Memorable Brand Identities</h6>
               </div>
 
@@ -632,7 +643,9 @@
                 <a href="/about">
                   <h6>About me</h6>
                 </a>
-                <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
+                <a href="mailto:vickyw.design@gmail.com">
+                  <h6>Email me</h6>
+                </a>
               </div>
             </div>
 
